@@ -1,6 +1,6 @@
 // AspectJ
 /*******************************************************************************
- * Copyright (c) 2000, 2018 IBM Corporation and others.
+ * Copyright (c) 2000, 2021 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -14,7 +14,7 @@
  *     Tom Tromey - Contribution for bug 125961
  *     Tom Tromey - Contribution for bug 159641
  *     Benjamin Muskalla - Contribution for bug 239066
- *     Stephan Herrmann  - Contributions for 
+ *     Stephan Herrmann  - Contributions for
  *     							bug 236385 - [compiler] Warn for potential programming problem if an object is created but not used
  *     							bug 295551 - Add option to automatically promote all warnings to errors
  *     							bug 359721 - [options] add command line option for new warning token "resource"
@@ -28,7 +28,8 @@
  *								Bug 408815 - [batch][null] Add CLI option for COMPILER_PB_SYNTACTIC_NULL_ANALYSIS_FOR_FIELDS
  *     Jesper S Moller   - Contributions for
  *								bug 407297 - [1.8][compiler] Control generation of parameter names by option
- *    Mat Booth - Contribution for bug 405176 
+ *    Mat Booth - Contribution for bug 405176
+ *    Frits Jalvingh - fix for bug 533830.
  *******************************************************************************/
 package org.aspectj.org.eclipse.jdt.internal.compiler.batch;
 
@@ -49,6 +50,8 @@ import java.io.StringReader;
 import java.io.StringWriter;
 import java.io.UnsupportedEncodingException;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.text.DateFormat;
@@ -70,6 +73,7 @@ import java.util.Properties;
 import java.util.ResourceBundle;
 import java.util.Set;
 import java.util.StringTokenizer;
+import java.util.function.Function;
 
 import org.aspectj.org.eclipse.jdt.core.compiler.CategorizedProblem;
 import org.aspectj.org.eclipse.jdt.core.compiler.CharOperation;
@@ -89,6 +93,7 @@ import org.aspectj.org.eclipse.jdt.internal.compiler.batch.ModuleFinder.AddExpor
 import org.aspectj.org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants;
 import org.aspectj.org.eclipse.jdt.internal.compiler.classfmt.ClassFileReader;
 import org.aspectj.org.eclipse.jdt.internal.compiler.classfmt.ClassFormatException;
+import org.aspectj.org.eclipse.jdt.internal.compiler.classfmt.ExternalAnnotationProvider;
 import org.aspectj.org.eclipse.jdt.internal.compiler.env.AccessRestriction;
 import org.aspectj.org.eclipse.jdt.internal.compiler.env.AccessRule;
 import org.aspectj.org.eclipse.jdt.internal.compiler.env.AccessRuleSet;
@@ -104,6 +109,7 @@ import org.aspectj.org.eclipse.jdt.internal.compiler.lookup.PackageBinding;
 import org.aspectj.org.eclipse.jdt.internal.compiler.lookup.ReferenceBinding;
 import org.aspectj.org.eclipse.jdt.internal.compiler.lookup.TypeConstants;
 import org.aspectj.org.eclipse.jdt.internal.compiler.parser.Parser;
+import org.aspectj.org.eclipse.jdt.internal.compiler.problem.DefaultProblem;
 import org.aspectj.org.eclipse.jdt.internal.compiler.problem.DefaultProblemFactory;
 import org.aspectj.org.eclipse.jdt.internal.compiler.problem.ProblemReporter;
 import org.aspectj.org.eclipse.jdt.internal.compiler.problem.ProblemSeverities;
@@ -121,7 +127,6 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		private PrintWriter log;
 		private Main main;
 		private PrintWriter out;
-		private HashMap<String, Object> parameters;
 		int tagBits;
 		private static final String CLASS = "class"; //$NON-NLS-1$
 		private static final String CLASS_FILE = "classfile"; //$NON-NLS-1$
@@ -190,7 +195,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		private static final String INFO = "INFO"; //$NON-NLS-1$
 
 		public static final int XML = 1;
-		private static final String XML_DTD_DECLARATION = "<!DOCTYPE compiler PUBLIC \"-//Eclipse.org//DTD Eclipse JDT 3.2.005 Compiler//EN\" \"http://www.eclipse.org/jdt/core/compiler_32_005.dtd\">"; //$NON-NLS-1$
+		private static final String XML_DTD_DECLARATION = "<!DOCTYPE compiler PUBLIC \"-//Eclipse.org//DTD Eclipse JDT 3.2.006 Compiler//EN\" \"http://www.eclipse.org/jdt/core/compiler_32_006.dtd\">"; //$NON-NLS-1$
 		static {
 			try {
 				Class<?> c = IProblem.class;
@@ -206,18 +211,13 @@ public class Main implements ProblemSeverities, SuffixConstants {
 						Logger.FIELD_TABLE.put(key2, field.getName());
 					}
 				}
-			} catch (SecurityException e) {
-				e.printStackTrace();
-			} catch (IllegalArgumentException e) {
-				e.printStackTrace();
-			} catch (IllegalAccessException e) {
+			} catch (SecurityException | IllegalArgumentException | IllegalAccessException e) {
 				e.printStackTrace();
 			}
 		}
 		public Logger(Main main, PrintWriter out, PrintWriter err) {
 			this.out = out;
 			this.err = err;
-			this.parameters = new HashMap<>();
 			this.main = main;
 		}
 
@@ -229,7 +229,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 
 			outputPath = outputPath.replace('/', fileSeparatorChar);
 			// To be able to pass the mkdirs() method we need to remove the extra file separator at the end of the outDir name
-			StringBuffer outDir = new StringBuffer(outputPath);
+			StringBuilder outDir = new StringBuilder(outputPath);
 			if (!outputPath.endsWith(fileSeparator)) {
 				outDir.append(fileSeparator);
 			}
@@ -318,7 +318,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 				|| (length = unitSource.length) == 0)
 				return Messages.problem_noSourceInformation;
 
-			StringBuffer errorBuffer = new StringBuffer();
+			StringBuilder errorBuffer = new StringBuilder();
 			if ((bits & Main.Logger.EMACS) == 0) {
 				errorBuffer.append(' ').append(Messages.bind(Messages.problem_atLine, String.valueOf(problem.getSourceLineNumber())));
 				errorBuffer.append(Util.LINE_SEPARATOR);
@@ -381,10 +381,11 @@ public class Main implements ProblemSeverities, SuffixConstants {
 					|| (unitSource == null)
 					|| ((length = unitSource.length) <= 0)
 					|| (endPosition > length)) {
-				this.parameters.put(Logger.VALUE, Messages.problem_noSourceInformation);
-				this.parameters.put(Logger.SOURCE_START, "-1"); //$NON-NLS-1$
-				this.parameters.put(Logger.SOURCE_END, "-1"); //$NON-NLS-1$
-				printTag(Logger.SOURCE_CONTEXT, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.VALUE, Messages.problem_noSourceInformation);
+				parameters.put(Logger.SOURCE_START, "-1"); //$NON-NLS-1$
+				parameters.put(Logger.SOURCE_END, "-1"); //$NON-NLS-1$
+				printTag(Logger.SOURCE_CONTEXT, parameters, true, true);
 				return;
 			}
 
@@ -410,11 +411,11 @@ public class Main implements ProblemSeverities, SuffixConstants {
 			// copy source
 			StringBuffer buffer = new StringBuffer();
 			buffer.append(unitSource, begin, end - begin + 1);
-
-			this.parameters.put(Logger.VALUE, String.valueOf(buffer));
-			this.parameters.put(Logger.SOURCE_START, Integer.toString(startPosition - begin));
-			this.parameters.put(Logger.SOURCE_END, Integer.toString(endPosition - begin));
-			printTag(Logger.SOURCE_CONTEXT, this.parameters, true, true);
+			HashMap<String, Object> parameters = new HashMap<>();
+			parameters.put(Logger.VALUE, String.valueOf(buffer));
+			parameters.put(Logger.SOURCE_START, Integer.toString(startPosition - begin));
+			parameters.put(Logger.SOURCE_END, Integer.toString(endPosition - begin));
+			printTag(Logger.SOURCE_CONTEXT, parameters, true, true);
 		}
 		public void flush() {
 			this.out.flush();
@@ -508,8 +509,9 @@ public class Main implements ProblemSeverities, SuffixConstants {
 				}
 				File f = new File(fileName);
 				try {
-					this.parameters.put(Logger.PATH, f.getCanonicalPath());
-					printTag(Logger.CLASS_FILE, this.parameters, true, true);
+					HashMap<String, Object> parameters = new HashMap<>();
+					parameters.put(Logger.PATH, f.getCanonicalPath());
+					printTag(Logger.CLASS_FILE, parameters, true, true);
 				} catch (IOException e) {
 					logNoClassFileCreated(outputPath, relativeFileName, e);
 				}
@@ -521,10 +523,11 @@ public class Main implements ProblemSeverities, SuffixConstants {
 				final int length = classpaths.length;
 				if (length != 0) {
 					// generate xml output
-					printTag(Logger.CLASSPATHS, null, true, false);
+					printTag(Logger.CLASSPATHS, new HashMap<>(), true, false);
+					HashMap<String, Object> parameters = new HashMap<>();
 					for (int i = 0; i < length; i++) {
 						String classpath = classpaths[i].getPath();
-						this.parameters.put(Logger.PATH, classpath);
+						parameters.put(Logger.PATH, classpath);
 						File f = new File(classpath);
 						String id = null;
 						if (f.isFile()) {
@@ -541,8 +544,8 @@ public class Main implements ProblemSeverities, SuffixConstants {
 							id = Logger.CLASSPATH_FOLDER;
 						}
 						if (id != null) {
-							this.parameters.put(Logger.CLASSPATH_ID, id);
-							printTag(Logger.CLASSPATH, this.parameters, true, true);
+							parameters.put(Logger.CLASSPATH_ID, id);
+							printTag(Logger.CLASSPATH, parameters, true, true);
 						}
 					}
 					endTag(Logger.CLASSPATHS);
@@ -557,10 +560,11 @@ public class Main implements ProblemSeverities, SuffixConstants {
 				final int length = commandLineArguments.length;
 				if (length != 0) {
 					// generate xml output
-					printTag(Logger.COMMAND_LINE_ARGUMENTS, null, true, false);
+					printTag(Logger.COMMAND_LINE_ARGUMENTS, new HashMap<>(), true, false);
 					for (int i = 0; i < length; i++) {
-						this.parameters.put(Logger.VALUE, commandLineArguments[i]);
-						printTag(Logger.COMMAND_LINE_ARGUMENT, this.parameters, true, true);
+						HashMap<String, Object> parameters = new HashMap<>();
+						parameters.put(Logger.VALUE, commandLineArguments[i]);
+						printTag(Logger.COMMAND_LINE_ARGUMENT, parameters, true, true);
 					}
 					endTag(Logger.COMMAND_LINE_ARGUMENTS);
 				}
@@ -581,7 +585,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 				LineNumberReader reader = new LineNumberReader(new StringReader(stackTrace));
 				String line;
 				int i = 0;
-				StringBuffer buffer = new StringBuffer();
+				StringBuilder buffer = new StringBuilder();
 				String message = e.getMessage();
 				if (message != null) {
 					buffer.append(message).append(Util.LINE_SEPARATOR);
@@ -596,9 +600,10 @@ public class Main implements ProblemSeverities, SuffixConstants {
 					// ignore
 				}
 				message = buffer.toString();
-				this.parameters.put(Logger.MESSAGE, message);
-				this.parameters.put(Logger.CLASS, e.getClass());
-				printTag(Logger.EXCEPTION, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.MESSAGE, message);
+				parameters.put(Logger.CLASS, e.getClass());
+				printTag(Logger.EXCEPTION, parameters, true, true);
 			}
 			String message = e.getMessage();
 			if (message == null) {
@@ -663,7 +668,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 				int infos = 0;
 				for (int i = 0; i < count; i++) {
 					CategorizedProblem problem = problems.get(i);
-					if (problem != null) {
+					if (!this.main.isIgnored(problem)) {
 						currentMain.globalProblemsCount++;
 						logExtraProblem(problem, localProblemCount, currentMain.globalProblemsCount);
 						localProblemCount++;
@@ -684,7 +689,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 						startLoggingExtraProblems(count);
 						for (int i = 0; i < count; i++) {
 							CategorizedProblem problem = problems.get(i);
-							if (problem!= null) {
+							if (!this.main.isIgnored(problem)) {
 								if (problem.getID() != IProblem.Task) {
 									logXmlExtraProblem(problem, localProblemCount, currentMain.globalProblemsCount);
 								}
@@ -698,16 +703,18 @@ public class Main implements ProblemSeverities, SuffixConstants {
 
 		public void logUnavaibleAPT(String className) {
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.MESSAGE, this.main.bind("configure.unavailableAPT", className)); //$NON-NLS-1$
-				printTag(Logger.ERROR_TAG, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.MESSAGE, this.main.bind("configure.unavailableAPT", className)); //$NON-NLS-1$
+				printTag(Logger.ERROR_TAG, parameters, true, true);
 			}
 			this.printlnErr(this.main.bind("configure.unavailableAPT", className)); //$NON-NLS-1$
 		}
 
 		public void logIncorrectVMVersionForAnnotationProcessing() {
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.MESSAGE, this.main.bind("configure.incorrectVMVersionforAPT")); //$NON-NLS-1$
-				printTag(Logger.ERROR_TAG, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.MESSAGE, this.main.bind("configure.incorrectVMVersionforAPT")); //$NON-NLS-1$
+				printTag(Logger.ERROR_TAG, parameters, true, true);
 			}
 			this.printlnErr(this.main.bind("configure.incorrectVMVersionforAPT")); //$NON-NLS-1$
 		}
@@ -717,13 +724,14 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		 */
 		public void logNoClassFileCreated(String outputDir, String relativeFileName, IOException e) {
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.MESSAGE, this.main.bind("output.noClassFileCreated", //$NON-NLS-1$
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.MESSAGE, this.main.bind("output.noClassFileCreated", //$NON-NLS-1$
 					new String[] {
 						outputDir,
 						relativeFileName,
 						e.getMessage()
 					}));
-				printTag(Logger.ERROR_TAG, this.parameters, true, true);
+				printTag(Logger.ERROR_TAG, parameters, true, true);
 			}
 			this.printlnErr(this.main.bind("output.noClassFileCreated", //$NON-NLS-1$
 				new String[] {
@@ -738,8 +746,9 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		 */
 		public void logNumberOfClassFilesGenerated(int exportedClassFilesCounter) {
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.VALUE, Integer.valueOf(exportedClassFilesCounter));
-				printTag(Logger.NUMBER_OF_CLASSFILES, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.VALUE, Integer.valueOf(exportedClassFilesCounter));
+				printTag(Logger.NUMBER_OF_CLASSFILES, parameters, true, true);
 			}
 			if (exportedClassFilesCounter == 1) {
 				printlnOut(this.main.bind("compile.oneClassFileGenerated")); //$NON-NLS-1$
@@ -754,7 +763,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		 */
 		public void logOptions(Map<String, String> options) {
 			if ((this.tagBits & Logger.XML) != 0) {
-				printTag(Logger.OPTIONS, null, true, false);
+				printTag(Logger.OPTIONS, new HashMap<>(), true, false);
 				final Set<Map.Entry<String, String>> entriesSet = options.entrySet();
 				Map.Entry<String, String>[] entries = entriesSet.toArray(new Map.Entry[entriesSet.size()]);
 				Arrays.sort(entries, new Comparator<Map.Entry<String, String>>() {
@@ -765,12 +774,13 @@ public class Main implements ProblemSeverities, SuffixConstants {
 						return entry1.getKey().compareTo(entry2.getKey());
 					}
 				});
+				HashMap<String, Object> parameters = new HashMap<>();
 				for (int i = 0, max = entries.length; i < max; i++) {
 					Map.Entry<String, String> entry = entries[i];
 					String key = entry.getKey();
-					this.parameters.put(Logger.KEY, key);
-					this.parameters.put(Logger.VALUE, entry.getValue());
-					printTag(Logger.OPTION, this.parameters, true, true);
+					parameters.put(Logger.KEY, key);
+					parameters.put(Logger.VALUE, entry.getValue());
+					printTag(Logger.OPTION, parameters, true, true);
 				}
 				endTag(Logger.OPTIONS);
 			}
@@ -781,8 +791,9 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		 */
 		public void logPendingError(String error) {
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.MESSAGE, error);
-				printTag(Logger.ERROR_TAG, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.MESSAGE, error);
+				printTag(Logger.ERROR_TAG, parameters, true, true);
 			}
 			this.printlnErr(error);
 		}
@@ -792,14 +803,18 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		 */
 		public void logWarning(String message) {
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.MESSAGE, message);
-				printTag(Logger.WARNING_TAG, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.MESSAGE, message);
+				printTag(Logger.WARNING_TAG, parameters, true, true);
 			}
 			this.printlnOut(message);
 		}
 
 		private void logProblem(CategorizedProblem problem, int localErrorCount,
 			int globalErrorCount, char[] unitSource) {
+			if(problem instanceof DefaultProblem) {
+				((DefaultProblem) problem).reportError();
+			}
 			if ((this.tagBits & Logger.EMACS) != 0) {
 				String severity = problem.isError() ? "output.emacs.error" : //$NON-NLS-1$
 									problem.isInfo() ? "output.emacs.info" //$NON-NLS-1$
@@ -904,12 +919,13 @@ public class Main implements ProblemSeverities, SuffixConstants {
 			int globalErrorsCount, int globalWarningsCount, int globalInfoCount, int globalTasksCount) {
 			if ((this.tagBits & Logger.XML) != 0) {
 				// generate xml
-				this.parameters.put(Logger.NUMBER_OF_PROBLEMS, Integer.valueOf(globalProblemsCount));
-				this.parameters.put(Logger.NUMBER_OF_ERRORS, Integer.valueOf(globalErrorsCount));
-				this.parameters.put(Logger.NUMBER_OF_WARNINGS, Integer.valueOf(globalWarningsCount));
-				this.parameters.put(Logger.NUMBER_OF_INFOS, Integer.valueOf(globalInfoCount));
-				this.parameters.put(Logger.NUMBER_OF_TASKS, Integer.valueOf(globalTasksCount));
-				printTag(Logger.PROBLEM_SUMMARY, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.NUMBER_OF_PROBLEMS, Integer.valueOf(globalProblemsCount));
+				parameters.put(Logger.NUMBER_OF_ERRORS, Integer.valueOf(globalErrorsCount));
+				parameters.put(Logger.NUMBER_OF_WARNINGS, Integer.valueOf(globalWarningsCount));
+				parameters.put(Logger.NUMBER_OF_INFOS, Integer.valueOf(globalInfoCount));
+				parameters.put(Logger.NUMBER_OF_TASKS, Integer.valueOf(globalTasksCount));
+				printTag(Logger.PROBLEM_SUMMARY, parameters, true, true);
 			}
 			if (globalProblemsCount == 1) {
 				String message = null;
@@ -943,7 +959,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 				if (globalInfoCount == 1) {
 					infoMessage = this.main.bind("compile.oneInfo"); //$NON-NLS-1$
 				} else if (globalInfoCount > 1) {
-					infoMessage = this.main.bind("compile.severalInfos", String.valueOf(warningsNumber)); //$NON-NLS-1$					
+					infoMessage = this.main.bind("compile.severalInfos", String.valueOf(globalInfoCount)); //$NON-NLS-1$
 				}
 				if (globalProblemsCount == globalInfoCount || globalProblemsCount == globalErrorsCount || globalProblemsCount == globalWarningsCount) {
 					String msg = errorMessage != null ? errorMessage : warningMessage != null ? warningMessage : infoMessage;
@@ -978,6 +994,10 @@ public class Main implements ProblemSeverities, SuffixConstants {
 					}
 				}
 			}
+			if (this.main.failOnWarning && globalWarningsCount > 0) {
+				printErr("\n"); //$NON-NLS-1$
+				printErr(this.main.bind("compile.failOnWarning")); //$NON-NLS-1$
+			}
 			if ((this.tagBits & Logger.XML) == 0) {
 				this.printlnErr();
 			}
@@ -1007,10 +1027,11 @@ public class Main implements ProblemSeverities, SuffixConstants {
 			long time = compilerStats.elapsedTime();
 			long lineCount = compilerStats.lineCount;
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.VALUE, Long.valueOf(time));
-				printTag(Logger.TIME, this.parameters, true, true);
-				this.parameters.put(Logger.VALUE, Long.valueOf(lineCount));
-				printTag(Logger.NUMBER_OF_LINES, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.VALUE, Long.valueOf(time));
+				printTag(Logger.TIME, parameters, true, true);
+				parameters.put(Logger.VALUE, Long.valueOf(lineCount));
+				printTag(Logger.NUMBER_OF_LINES, parameters, true, true);
 			}
 			if (lineCount != 0) {
 				printlnOut(
@@ -1093,8 +1114,9 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		 */
 		public void logWrongJDK() {
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.MESSAGE, this.main.bind("configure.requiresJDK1.2orAbove")); //$NON-NLS-1$
-				printTag(Logger.ERROR, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.MESSAGE, this.main.bind("configure.requiresJDK1.2orAbove")); //$NON-NLS-1$
+				printTag(Logger.ERROR, parameters, true, true);
 			}
 			this.printlnErr(this.main.bind("configure.requiresJDK1.2orAbove")); //$NON-NLS-1$
 		}
@@ -1103,13 +1125,14 @@ public class Main implements ProblemSeverities, SuffixConstants {
 			final int sourceStart = problem.getSourceStart();
 			final int sourceEnd = problem.getSourceEnd();
 			boolean isError = problem.isError();
-			this.parameters.put(Logger.PROBLEM_SEVERITY, isError ? Logger.ERROR : (problem.isInfo() ? Logger.INFO : Logger.WARNING));
-			this.parameters.put(Logger.PROBLEM_LINE, Integer.valueOf(problem.getSourceLineNumber()));
-			this.parameters.put(Logger.PROBLEM_SOURCE_START, Integer.valueOf(sourceStart));
-			this.parameters.put(Logger.PROBLEM_SOURCE_END, Integer.valueOf(sourceEnd));
-			printTag(Logger.EXTRA_PROBLEM_TAG, this.parameters, true, false);
-			this.parameters.put(Logger.VALUE, problem.getMessage());
-			printTag(Logger.PROBLEM_MESSAGE, this.parameters, true, true);
+			HashMap<String, Object> parameters = new HashMap<>();
+			parameters.put(Logger.PROBLEM_SEVERITY, isError ? Logger.ERROR : (problem.isInfo() ? Logger.INFO : Logger.WARNING));
+			parameters.put(Logger.PROBLEM_LINE, Integer.valueOf(problem.getSourceLineNumber()));
+			parameters.put(Logger.PROBLEM_SOURCE_START, Integer.valueOf(sourceStart));
+			parameters.put(Logger.PROBLEM_SOURCE_END, Integer.valueOf(sourceEnd));
+			printTag(Logger.EXTRA_PROBLEM_TAG, parameters, true, false);
+			parameters.put(Logger.VALUE, problem.getMessage());
+			printTag(Logger.PROBLEM_MESSAGE, parameters, true, true);
 			extractContext(problem, null);
 			endTag(Logger.EXTRA_PROBLEM_TAG);
 		}
@@ -1123,31 +1146,34 @@ public class Main implements ProblemSeverities, SuffixConstants {
 			final int sourceStart = problem.getSourceStart();
 			final int sourceEnd = problem.getSourceEnd();
 			final int id = problem.getID();
-			this.parameters.put(Logger.ID, getFieldName(id)); // ID as field name
-			this.parameters.put(Logger.PROBLEM_ID, Integer.valueOf(id)); // ID as numeric value
+			HashMap<String, Object> parameters = new HashMap<>();
+			parameters.put(Logger.ID, getFieldName(id)); // ID as field name
+			parameters.put(Logger.PROBLEM_ID, Integer.valueOf(id)); // ID as numeric value
 			boolean isError = problem.isError();
 			int severity = isError ? ProblemSeverities.Error : ProblemSeverities.Warning;
-			this.parameters.put(Logger.PROBLEM_SEVERITY, isError ? Logger.ERROR : (problem.isInfo() ? Logger.INFO : Logger.WARNING));
-			this.parameters.put(Logger.PROBLEM_LINE, Integer.valueOf(problem.getSourceLineNumber()));
-			this.parameters.put(Logger.PROBLEM_SOURCE_START, Integer.valueOf(sourceStart));
-			this.parameters.put(Logger.PROBLEM_SOURCE_END, Integer.valueOf(sourceEnd));
+			parameters.put(Logger.PROBLEM_SEVERITY, isError ? Logger.ERROR : (problem.isInfo() ? Logger.INFO : Logger.WARNING));
+			parameters.put(Logger.PROBLEM_LINE, Integer.valueOf(problem.getSourceLineNumber()));
+			parameters.put(Logger.PROBLEM_SOURCE_START, Integer.valueOf(sourceStart));
+			parameters.put(Logger.PROBLEM_SOURCE_END, Integer.valueOf(sourceEnd));
 			String problemOptionKey = getProblemOptionKey(id);
 			if (problemOptionKey != null) {
-				this.parameters.put(Logger.PROBLEM_OPTION_KEY, problemOptionKey);
+				parameters.put(Logger.PROBLEM_OPTION_KEY, problemOptionKey);
 			}
 			int categoryID = ProblemReporter.getProblemCategory(severity, id);
-			this.parameters.put(Logger.PROBLEM_CATEGORY_ID, Integer.valueOf(categoryID));
-			printTag(Logger.PROBLEM_TAG, this.parameters, true, false);
-			this.parameters.put(Logger.VALUE, problem.getMessage());
-			printTag(Logger.PROBLEM_MESSAGE, this.parameters, true, true);
+			parameters.put(Logger.PROBLEM_CATEGORY_ID, Integer.valueOf(categoryID));
+			printTag(Logger.PROBLEM_TAG, parameters, true, false);
+			parameters.put(Logger.VALUE, problem.getMessage());
+			printTag(Logger.PROBLEM_MESSAGE, parameters, true, true);
 			extractContext(problem, unitSource);
 			String[] arguments = problem.getArguments();
 			final int length = arguments.length;
 			if (length != 0) {
-				printTag(Logger.PROBLEM_ARGUMENTS, null, true, false);
+				parameters = new HashMap<>();
+				printTag(Logger.PROBLEM_ARGUMENTS, parameters, true, false);
 				for (int i = 0; i < length; i++) {
-					this.parameters.put(Logger.PROBLEM_ARGUMENT_VALUE, arguments[i]);
-					printTag(Logger.PROBLEM_ARGUMENT, this.parameters, true, true);
+					parameters = new HashMap<>();
+					parameters.put(Logger.PROBLEM_ARGUMENT_VALUE, arguments[i]);
+					printTag(Logger.PROBLEM_ARGUMENT, parameters, true, true);
 				}
 				endTag(Logger.PROBLEM_ARGUMENTS);
 			}
@@ -1160,16 +1186,17 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		 *            the given unit source
 		 */
 		private void logXmlTask(CategorizedProblem problem, char[] unitSource) {
-			this.parameters.put(Logger.PROBLEM_LINE, Integer.valueOf(problem.getSourceLineNumber()));
-			this.parameters.put(Logger.PROBLEM_SOURCE_START, Integer.valueOf(problem.getSourceStart()));
-			this.parameters.put(Logger.PROBLEM_SOURCE_END, Integer.valueOf(problem.getSourceEnd()));
+			HashMap<String, Object> parameters = new HashMap<>();
+			parameters.put(Logger.PROBLEM_LINE, Integer.valueOf(problem.getSourceLineNumber()));
+			parameters.put(Logger.PROBLEM_SOURCE_START, Integer.valueOf(problem.getSourceStart()));
+			parameters.put(Logger.PROBLEM_SOURCE_END, Integer.valueOf(problem.getSourceEnd()));
 			String problemOptionKey = getProblemOptionKey(problem.getID());
 			if (problemOptionKey != null) {
-				this.parameters.put(Logger.PROBLEM_OPTION_KEY, problemOptionKey);
+				parameters.put(Logger.PROBLEM_OPTION_KEY, problemOptionKey);
 			}
-			printTag(Logger.TASK, this.parameters, true, false);
-			this.parameters.put(Logger.VALUE, problem.getMessage());
-			printTag(Logger.PROBLEM_MESSAGE, this.parameters, true, true);
+			printTag(Logger.TASK, parameters, true, false);
+			parameters.put(Logger.VALUE, problem.getMessage());
+			printTag(Logger.PROBLEM_MESSAGE, parameters, true, true);
 			extractContext(problem, unitSource);
 			endTag(Logger.TASK);
 		}
@@ -1216,7 +1243,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		public void printStats() {
 			final boolean isTimed = (this.main.timing & TIMING_ENABLED) != 0;
 			if ((this.tagBits & Logger.XML) != 0) {
-				printTag(Logger.STATS, null, true, false);
+				printTag(Logger.STATS, new HashMap<>(), true, false);
 			}
 			if (isTimed) {
 				CompilerStats compilerStats = this.main.batchCompiler.stats;
@@ -1225,7 +1252,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 				logTiming(compilerStats);
 			}
 			if (this.main.globalProblemsCount > 0) {
-				logProblemsSummary(this.main.globalProblemsCount, this.main.globalErrorsCount, this.main.globalWarningsCount, 
+				logProblemsSummary(this.main.globalProblemsCount, this.main.globalErrorsCount, this.main.globalWarningsCount,
 						this.main.globalInfoCount, this.main.globalTasksCount);
 			}
 			if (this.main.exportedClassFilesCounter != 0
@@ -1239,9 +1266,9 @@ public class Main implements ProblemSeverities, SuffixConstants {
 
 		private void printTag(String name, HashMap<String, Object> params, boolean insertNewLine, boolean closeTag) {
 			if (this.log != null) {
-				((GenericXMLWriter) this.log).printTag(name, this.parameters, true, insertNewLine, closeTag);
+				((GenericXMLWriter) this.log).printTag(name, params, true, insertNewLine, closeTag);
 			}
-			this.parameters.clear();
+			if (params != null) params.clear();
 		}
 
 		public void setEmacs() {
@@ -1259,10 +1286,11 @@ public class Main implements ProblemSeverities, SuffixConstants {
 						// insert time stamp as comment
 						this.log.println("<!-- " + dateFormat.format(date) + " -->");//$NON-NLS-1$//$NON-NLS-2$
 						this.log.println(Logger.XML_DTD_DECLARATION);
-						this.parameters.put(Logger.COMPILER_NAME, this.main.bind("compiler.name")); //$NON-NLS-1$
-						this.parameters.put(Logger.COMPILER_VERSION, this.main.bind("compiler.version")); //$NON-NLS-1$
-						this.parameters.put(Logger.COMPILER_COPYRIGHT, this.main.bind("compiler.copyright")); //$NON-NLS-1$
-						printTag(Logger.COMPILER, this.parameters, true, false);
+						HashMap<String, Object> parameters = new HashMap<>();
+						parameters.put(Logger.COMPILER_NAME, this.main.bind("compiler.name")); //$NON-NLS-1$
+						parameters.put(Logger.COMPILER_VERSION, this.main.bind("compiler.version")); //$NON-NLS-1$
+						parameters.put(Logger.COMPILER_COPYRIGHT, this.main.bind("compiler.copyright")); //$NON-NLS-1$
+						printTag(Logger.COMPILER, parameters, true, false);
 					} else {
 						this.log = new PrintWriter(new FileOutputStream(logFileName, false));
 						this.log.println("# " + dateFormat.format(date));//$NON-NLS-1$
@@ -1278,8 +1306,9 @@ public class Main implements ProblemSeverities, SuffixConstants {
 			}
 		}
 		private void startLoggingExtraProblems(int count) {
-			this.parameters.put(Logger.NUMBER_OF_PROBLEMS, Integer.valueOf(count));
-			printTag(Logger.EXTRA_PROBLEMS, this.parameters, true, false);
+			HashMap<String, Object> parameters = new HashMap<>();
+			parameters.put(Logger.NUMBER_OF_PROBLEMS, Integer.valueOf(count));
+			printTag(Logger.EXTRA_PROBLEMS, parameters, true, false);
 		}
 
 		/**
@@ -1287,25 +1316,27 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		 * Only use in xml mode.
 		 */
 		private void startLoggingProblems(int errors, int warnings, int infos) {
-			this.parameters.put(Logger.NUMBER_OF_PROBLEMS, Integer.valueOf(errors + warnings));
-			this.parameters.put(Logger.NUMBER_OF_ERRORS, Integer.valueOf(errors));
-			this.parameters.put(Logger.NUMBER_OF_WARNINGS, Integer.valueOf(warnings));
-			this.parameters.put(Logger.NUMBER_OF_INFOS, Integer.valueOf(infos));
-			printTag(Logger.PROBLEMS, this.parameters, true, false);
+			HashMap<String, Object> parameters = new HashMap<>();
+			parameters.put(Logger.NUMBER_OF_PROBLEMS, Integer.valueOf(errors + warnings));
+			parameters.put(Logger.NUMBER_OF_ERRORS, Integer.valueOf(errors));
+			parameters.put(Logger.NUMBER_OF_WARNINGS, Integer.valueOf(warnings));
+			parameters.put(Logger.NUMBER_OF_INFOS, Integer.valueOf(infos));
+			printTag(Logger.PROBLEMS, parameters, true, false);
 		}
 
 		public void startLoggingSource(CompilationResult compilationResult) {
 			if ((this.tagBits & Logger.XML) != 0) {
 				ICompilationUnit compilationUnit = compilationResult.compilationUnit;
+				HashMap<String, Object> parameters = new HashMap<>();
 				if (compilationUnit != null) {
     				char[] fileName = compilationUnit.getFileName();
     				File f = new File(new String(fileName));
     				if (fileName != null) {
-    					this.parameters.put(Logger.PATH, f.getAbsolutePath());
+    					parameters.put(Logger.PATH, f.getAbsolutePath());
     				}
     				char[][] packageName = compilationResult.packageName;
     				if (packageName != null) {
-    					this.parameters.put(
+    					parameters.put(
     							Logger.PACKAGE,
     							new String(CharOperation.concatWith(packageName, File.separatorChar)));
     				}
@@ -1316,26 +1347,27 @@ public class Main implements ProblemSeverities, SuffixConstants {
 					}
 					if (destinationPath != null && destinationPath != NONE) {
 						if (File.separatorChar == '/') {
-							this.parameters.put(Logger.OUTPUT, destinationPath);
+							parameters.put(Logger.OUTPUT, destinationPath);
 						} else {
-							this.parameters.put(Logger.OUTPUT, destinationPath.replace('/', File.separatorChar));
+							parameters.put(Logger.OUTPUT, destinationPath.replace('/', File.separatorChar));
 						}
 					}
 				}
-				printTag(Logger.SOURCE, this.parameters, true, false);
+				printTag(Logger.SOURCE, parameters, true, false);
 			}
 		}
 
 		public void startLoggingSources() {
 			if ((this.tagBits & Logger.XML) != 0) {
-				printTag(Logger.SOURCES, null, true, false);
+				printTag(Logger.SOURCES, new HashMap<>(), true, false);
 			}
 		}
 
 		public void startLoggingTasks(int tasks) {
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.NUMBER_OF_TASKS, Integer.valueOf(tasks));
-				printTag(Logger.TASKS, this.parameters, true, false);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.NUMBER_OF_TASKS, Integer.valueOf(tasks));
+				printTag(Logger.TASKS, parameters, true, false);
 			}
 		}
 	}
@@ -1370,6 +1402,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 	protected FileSystem.Classpath[] checkedClasspaths;
 	// For single module mode
 	protected IModule module;
+	private String moduleVersion;
 	// paths to external annotations:
 	protected List<String> annotationPaths;
 	protected boolean annotationsFromClasspath;
@@ -1424,6 +1457,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 	protected PrintWriter out;
 	public boolean proceed = true;
 	public boolean proceedOnError = false;
+	public boolean failOnWarning = false;
 	public boolean produceRefInfo = false;
 	public int currentRepetition, maxRepetition;
 	public boolean showProgress = false;
@@ -1443,8 +1477,17 @@ public class Main implements ProblemSeverities, SuffixConstants {
 	private PrintWriter err;
 
 	protected ArrayList<CategorizedProblem> extraProblems;
-	// AspectJ Extension - made non final
-	public static String bundleName = "org.aspectj.org.eclipse.jdt.internal.compiler.batch.messages"; //$NON-NLS-1$
+
+	public final static String bundleName = "org.aspectj.org.eclipse.jdt.internal.compiler.batch.messages"; //$NON-NLS-1$
+
+	// AspectJ Extension: Fictitious ISO country code 'aspectj' identifies a resource bundle 'messages_aspectj.properties'
+	// in the AspectJ code base. That file is meant to define a delta of AspectJ-specific properties not found in the
+	// original 'messages.properties' or overriding them, such as compiler name and version. This way we do not have to
+	// merge the two files all the time, keeping their contents in sync. Java will automatically handle the
+	// country-specific resource bundle with precedence over the unspecific one found in the Eclipse code base.
+	public static final Locale aspectjLocale = Locale.forLanguageTag("aspectj");
+	// End AspectJ Extension
+
 	// two uses: recognize 'none' in options; code the singleton none
 	// for the '-d none' option (wherever it may be found)
 	public static final int DEFAULT_SIZE_CLASSPATH = 4;
@@ -1637,7 +1680,7 @@ protected void addNewEntry(ArrayList<FileSystem.Classpath> paths, String current
 	if (NONE.equals(destPath)) {
 		destPath = NONE; // keep == comparison valid
 	}
-	
+
 	if (rejectDestinationPathOnJars && destPath != null &&
 			Util.archiveFormat(currentClasspathName) > -1) {
 		throw new IllegalArgumentException(
@@ -1649,7 +1692,7 @@ protected void addNewEntry(ArrayList<FileSystem.Classpath> paths, String current
 			customEncoding,
 			isSourceOnly,
 			accessRuleSet,
-			destPath, 
+			destPath,
 			this.options,
 			this.releaseVersion);
 	if (currentClasspath != null) {
@@ -1678,12 +1721,12 @@ public String bind(String id) {
 public String bind(String id, String binding) {
 	return bind(id, new String[] { binding });
 }
-//AspectJ Extension - static form of bind that just uses the default locale
+// AspectJ Extension - static form of bind that uses the special 'aspectj' locale
 public static String _bind(String id,String []arguments) {
 	if (id==null) return "No message available"; //$NON-NLS-1$
 	String message = null;
 	try {
-	  message = ResourceBundleFactory.getBundle(Locale.getDefault()).getString(id);
+	  message = ResourceBundleFactory.getBundle(aspectjLocale).getString(id);
 	} catch (MissingResourceException mre) {
 		// If we got an exception looking for the message, fail gracefully by just returning
 		// the id we were looking for.  In most cases this is semi-informative so is not too bad.
@@ -1691,7 +1734,7 @@ public static String _bind(String id,String []arguments) {
 	}
 	return MessageFormat.format(message, arguments);
 }
-//End AspectJ Extension
+// End AspectJ Extension
 
 /*
  * Lookup the message with the given ID in this catalog and bind its
@@ -1730,11 +1773,15 @@ public String bind(String id, String[] arguments) {
  * <li><code>org.aspectj.org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants.JDK1_4</code></li>
  * <li><code>org.aspectj.org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants.JDK1_5</code></li>
  * <li><code>org.aspectj.org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants.JDK1_6</code></li>
+ * <li><code>org.aspectj.org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants.JDK1_7</code></li>
  * <li><code>org.aspectj.org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants.JDK1_8</code></li>
  * <li><code>org.aspectj.org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants.JDK9</code></li>
  * <li><code>org.aspectj.org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants.JDK10</code></li>
  * <li><code>org.aspectj.org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants.JDK11</code></li>
- * 
+ * <li><code>org.aspectj.org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants.JDK12</code></li>
+ * <li><code>org.aspectj.org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants.JDK13</code></li>
+ * <li><code>org.aspectj.org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants.JDK14</code></li>
+ *
  * </ul>
  * @param minimalSupportedVersion the given minimal version
  * @return true if and only if the running VM supports the given minimal version, false otherwise
@@ -1798,16 +1845,11 @@ public boolean compile(String[] argv) {
 		if (this.systemExitWhenFinished) {
 			this.logger.flush();
 			this.logger.close();
+			if (this.failOnWarning && this.globalWarningsCount > 0) {
+				System.exit(-1);
+			}
 			System.exit(this.globalErrorsCount > 0 ? -1 : 0);
 		}
-	} catch (IllegalArgumentException e) {
-		this.logger.logException(e);
-		if (this.systemExitWhenFinished) {
-			this.logger.flush();
-			this.logger.close();
-			System.exit(-1);
-		}
-		return false;
 	} catch (Exception e) { // internal compiler failure
 		this.logger.logException(e);
 		if (this.systemExitWhenFinished) {
@@ -1822,8 +1864,13 @@ public boolean compile(String[] argv) {
 		if (this.progress != null)
 			this.progress.done();
 	}
-	if (this.globalErrorsCount == 0 && (this.progress == null || !this.progress.isCanceled()))
-		return true;
+	if (this.progress == null || !this.progress.isCanceled()) {
+		if (this.failOnWarning && (this.globalWarningsCount > 0))
+			return false;
+		if (this.globalErrorsCount == 0)
+			return true;
+	}
+
 	return false;
 }
 
@@ -1865,6 +1912,7 @@ public void configure(String[] argv) {
 	final int INSIDE_ADD_MODULES = 29;
 	final int INSIDE_RELEASE = 30;
 	final int INSIDE_LIMIT_MODULES = 31;
+	final int INSIDE_MODULE_VERSION = 32;
 
 	final int DEFAULT = 0;
 	ArrayList<String> bootclasspaths = new ArrayList<>(DEFAULT_SIZE_CLASSPATH);
@@ -1897,7 +1945,7 @@ public void configure(String[] argv) {
 	String currentSourceDirectory = null;
 	String currentArg = Util.EMPTY_STRING;
 	String moduleName = null;
-	
+
 	Set<String> specifiedEncodings = null;
 
 	// expand the command line if necessary
@@ -1919,7 +1967,7 @@ public void configure(String[] argv) {
 			if (arg.startsWith("@")) { //$NON-NLS-1$
 				try {
 					LineNumberReader reader = new LineNumberReader(new StringReader(new String(Util.getFileCharContent(new File(arg.substring(1)), null))));
-					StringBuffer buffer = new StringBuffer();
+					StringBuilder buffer = new StringBuilder();
 					String line;
 					while((line = reader.readLine()) != null) {
 						line = line.trim();
@@ -2112,99 +2160,52 @@ public void configure(String[] argv) {
 					mode = INSIDE_DEFAULT_ENCODING;
 					continue;
 				}
-				if (currentArg.equals("-1.3")) { //$NON-NLS-1$
-					if (didSpecifyCompliance) {
-						throw new IllegalArgumentException(
-							this.bind("configure.duplicateCompliance", currentArg));//$NON-NLS-1$
+				if (currentArg.startsWith("-")) { //$NON-NLS-1$
+					String version = optionStringToVersion(currentArg.substring(1));
+					if (version != null) {
+						if (didSpecifyCompliance) {
+							throw new IllegalArgumentException(
+								this.bind("configure.duplicateCompliance", currentArg));//$NON-NLS-1$
+						}
+						didSpecifyCompliance = true;
+						this.options.put(CompilerOptions.OPTION_Compliance, version);
+						mode = DEFAULT;
+						continue;
 					}
-					didSpecifyCompliance = true;
-					this.options.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_1_3);
-					mode = DEFAULT;
-					continue;
 				}
-				if (currentArg.equals("-1.4")) { //$NON-NLS-1$
+				if (currentArg.equals("-15") || currentArg.equals("-15.0")) { //$NON-NLS-1$ //$NON-NLS-2$
 					if (didSpecifyCompliance) {
 						throw new IllegalArgumentException(
 							this.bind("configure.duplicateCompliance", currentArg)); //$NON-NLS-1$
 					}
 					didSpecifyCompliance = true;
-					this.options.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_1_4);
+					this.options.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_15);
 					mode = DEFAULT;
 					continue;
 				}
-				if (currentArg.equals("-1.5") || currentArg.equals("-5") || currentArg.equals("-5.0")) { //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+				if (currentArg.equals("-16") || currentArg.equals("-16.0")) { //$NON-NLS-1$ //$NON-NLS-2$
 					if (didSpecifyCompliance) {
 						throw new IllegalArgumentException(
 							this.bind("configure.duplicateCompliance", currentArg)); //$NON-NLS-1$
 					}
 					didSpecifyCompliance = true;
-					this.options.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_1_5);
+					this.options.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_16);
 					mode = DEFAULT;
 					continue;
 				}
-				if (currentArg.equals("-1.6") || currentArg.equals("-6") || currentArg.equals("-6.0")) { //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+				if (currentArg.equals("-17") || currentArg.equals("-17.0")) { //$NON-NLS-1$ //$NON-NLS-2$
 					if (didSpecifyCompliance) {
 						throw new IllegalArgumentException(
 							this.bind("configure.duplicateCompliance", currentArg)); //$NON-NLS-1$
 					}
 					didSpecifyCompliance = true;
-					this.options.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_1_6);
-					mode = DEFAULT;
-					continue;
-				}
-				if (currentArg.equals("-1.7") || currentArg.equals("-7") || currentArg.equals("-7.0")) { //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
-					if (didSpecifyCompliance) {
-						throw new IllegalArgumentException(
-							this.bind("configure.duplicateCompliance", currentArg)); //$NON-NLS-1$
-					}
-					didSpecifyCompliance = true;
-					this.options.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_1_7);
-					mode = DEFAULT;
-					continue;
-				}
-				if (currentArg.equals("-1.8") || currentArg.equals("-8") || currentArg.equals("-8.0")) { //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
-					if (didSpecifyCompliance) {
-						throw new IllegalArgumentException(
-							this.bind("configure.duplicateCompliance", currentArg)); //$NON-NLS-1$
-					}
-					didSpecifyCompliance = true;
-					this.options.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_1_8);
-					mode = DEFAULT;
-					continue;
-				}
-				if (currentArg.equals("-1.9") || currentArg.equals("-9") || currentArg.equals("-9.0")) { //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
-					if (didSpecifyCompliance) {
-						throw new IllegalArgumentException(
-							this.bind("configure.duplicateCompliance", currentArg)); //$NON-NLS-1$
-					}
-					didSpecifyCompliance = true;
-					this.options.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_9);
-					mode = DEFAULT;
-					continue;
-				}
-				if (currentArg.equals("-10") || currentArg.equals("-10.0")) { //$NON-NLS-1$ //$NON-NLS-2$
-					if (didSpecifyCompliance) {
-						throw new IllegalArgumentException(
-							this.bind("configure.duplicateCompliance", currentArg)); //$NON-NLS-1$
-					}
-					didSpecifyCompliance = true;
-					this.options.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_10);
-					mode = DEFAULT;
-					continue;
-				}
-				if (currentArg.equals("-11") || currentArg.equals("-11.0")) { //$NON-NLS-1$ //$NON-NLS-2$
-					if (didSpecifyCompliance) {
-						throw new IllegalArgumentException(
-							this.bind("configure.duplicateCompliance", currentArg)); //$NON-NLS-1$
-					}
-					didSpecifyCompliance = true;
-					this.options.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_11);
+					this.options.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_16);
 					mode = DEFAULT;
 					continue;
 				}
 				if (currentArg.equals("-d")) { //$NON-NLS-1$
 					if (this.destinationPath != null) {
-						StringBuffer errorMessage = new StringBuffer();
+						StringBuilder errorMessage = new StringBuilder();
 						errorMessage.append(currentArg);
 						if ((index + 1) < argCount) {
 							errorMessage.append(' ');
@@ -2223,7 +2224,7 @@ public void configure(String[] argv) {
 				}
 				if (currentArg.equals("-bootclasspath")) {//$NON-NLS-1$
 					if (bootclasspaths.size() > 0) {
-						StringBuffer errorMessage = new StringBuffer();
+						StringBuilder errorMessage = new StringBuilder();
 						errorMessage.append(currentArg);
 						if ((index + 1) < argCount) {
 							errorMessage.append(' ');
@@ -2244,7 +2245,7 @@ public void configure(String[] argv) {
 					mode = INSIDE_SYSTEM;
 					continue;
 				}
-				if (currentArg.equals("--module-path") || currentArg.equals("-p") || currentArg.equals("--processor-module-path")) { //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+				if (currentArg.equals("--module-path") || currentArg.equals("-p")) { //$NON-NLS-1$ //$NON-NLS-2$
 					mode = INSIDE_MODULEPATH_start;
 					continue;
 				}
@@ -2271,9 +2272,13 @@ public void configure(String[] argv) {
 					mode = INSIDE_LIMIT_MODULES;
 					continue;
 				}
+				if (currentArg.equals("--module-version")) { //$NON-NLS-1$
+					mode = INSIDE_MODULE_VERSION;
+					continue;
+				}
 				if (currentArg.equals("-sourcepath")) {//$NON-NLS-1$
 					if (sourcepathClasspathArg != null) {
-						StringBuffer errorMessage = new StringBuffer();
+						StringBuilder errorMessage = new StringBuilder();
 						errorMessage.append(currentArg);
 						if ((index + 1) < argCount) {
 							errorMessage.append(' ');
@@ -2290,7 +2295,7 @@ public void configure(String[] argv) {
 				}
 				if (currentArg.equals("-extdirs")) {//$NON-NLS-1$
 					if (extdirsClasspaths != null) {
-						StringBuffer errorMessage = new StringBuffer();
+						StringBuilder errorMessage = new StringBuilder();
 						errorMessage.append(currentArg);
 						if ((index + 1) < argCount) {
 							errorMessage.append(' ');
@@ -2304,7 +2309,7 @@ public void configure(String[] argv) {
 				}
 				if (currentArg.equals("-endorseddirs")) { //$NON-NLS-1$
 					if (endorsedDirClasspaths != null) {
-						StringBuffer errorMessage = new StringBuffer();
+						StringBuilder errorMessage = new StringBuilder();
 						errorMessage.append(currentArg);
 						if ((index + 1) < argCount) {
 							errorMessage.append(' ');
@@ -2335,6 +2340,11 @@ public void configure(String[] argv) {
 						this.options.put(CompilerOptions.OPTION_FatalOptionalError, CompilerOptions.DISABLED);
 					}
 					this.proceedOnError = true;
+					continue;
+				}
+				if (currentArg.equals("-failOnWarning")) { //$NON-NLS-1$
+					mode = DEFAULT;
+					this.failOnWarning = true;
 					continue;
 				}
 				if (currentArg.equals("-time")) { //$NON-NLS-1$
@@ -2375,6 +2385,13 @@ public void configure(String[] argv) {
 					usageSection = "misc.usage.warn"; //$NON-NLS-1$
 					continue;
 				}
+				// AspectJ Extension: Print AspectJ -X options
+				if (currentArg.equals("-X")) { //$NON-NLS-1$
+					printUsageRequired = true;
+					usageSection = "xoption.usage"; //$NON-NLS-1$
+					continue;
+				}
+				// AspectJ Extension: End
 				if (currentArg.equals("-noExit")) { //$NON-NLS-1$
 					this.systemExitWhenFinished = false;
 					mode = DEFAULT;
@@ -2731,32 +2748,18 @@ public void configure(String[] argv) {
 					this.options.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_1_1);
 				} else if (currentArg.equals("1.2")) { //$NON-NLS-1$
 					this.options.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_1_2);
-				} else if (currentArg.equals("1.3")) { //$NON-NLS-1$
-					this.options.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_1_3);
-				} else if (currentArg.equals("1.4")) { //$NON-NLS-1$
-					this.options.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_1_4);
-				} else if (currentArg.equals("1.5") || currentArg.equals("5") || currentArg.equals("5.0")) { //$NON-NLS-1$//$NON-NLS-2$ //$NON-NLS-3$
-					this.options.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_1_5);
-				} else if (currentArg.equals("1.6") || currentArg.equals("6") || currentArg.equals("6.0")) { //$NON-NLS-1$//$NON-NLS-2$ //$NON-NLS-3$
-					this.options.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_1_6);
-				} else if (currentArg.equals("1.7") || currentArg.equals("7") || currentArg.equals("7.0")) { //$NON-NLS-1$//$NON-NLS-2$ //$NON-NLS-3$
-					this.options.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_1_7);
-				} else if (currentArg.equals("1.8") || currentArg.equals("8") || currentArg.equals("8.0")) { //$NON-NLS-1$//$NON-NLS-2$ //$NON-NLS-3$
-					this.options.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_1_8);
-				} else if (currentArg.equals("1.9") || currentArg.equals("9") || currentArg.equals("9.0")) { //$NON-NLS-1$//$NON-NLS-2$ //$NON-NLS-3$
-					this.options.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_9);
-				} else if (currentArg.equals("10") || currentArg.equals("10.0")) { //$NON-NLS-1$//$NON-NLS-2$
-					this.options.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_10);
-				} else if (currentArg.equals("11") || currentArg.equals("11.0")) { //$NON-NLS-1$//$NON-NLS-2$
-					this.options.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_11);
-				}
-				else if (currentArg.equals("jsr14")) { //$NON-NLS-1$
+				} else if (currentArg.equals("jsr14")) { //$NON-NLS-1$
 					this.options.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_JSR14);
 				} else if (currentArg.equals("cldc1.1")) { //$NON-NLS-1$
 					this.options.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_CLDC1_1);
 					this.options.put(CompilerOptions.OPTION_InlineJsr, CompilerOptions.ENABLED);
-				}else {
-					throw new IllegalArgumentException(this.bind("configure.targetJDK", currentArg)); //$NON-NLS-1$
+				} else {
+					String version = optionStringToVersion(currentArg);
+					if (version != null) {
+						this.options.put(CompilerOptions.OPTION_TargetPlatform, version);
+					} else {
+						throw new IllegalArgumentException(this.bind("configure.targetJDK", currentArg)); //$NON-NLS-1$
+					}
 				}
 				mode = DEFAULT;
 				continue;
@@ -2788,8 +2791,8 @@ public void configure(String[] argv) {
 				mode = DEFAULT;
 				continue;
 			case INSIDE_RELEASE:
-				// If release is < 9, the following are diasllowed:
-				// bootclasspath, -Xbootclasspath, -Xbootclasspath/a:, -Xbootclasspath/p:, 
+				// If release is < 9, the following are disallowed:
+				// bootclasspath, -Xbootclasspath, -Xbootclasspath/a:, -Xbootclasspath/p:,
 				// -endorseddirs, -Djava.endorsed.dirs, -extdirs, -Djava.ext.dirs
 
 				// If release >= 9, the following are disallowed
@@ -2820,24 +2823,9 @@ public void configure(String[] argv) {
 							this.bind("configure.unsupportedWithRelease", "-source"));//$NON-NLS-1$ //$NON-NLS-2$
 				}
 				this.didSpecifySource = true;
-				if (currentArg.equals("1.3")) { //$NON-NLS-1$
-					this.options.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_1_3);
-				} else if (currentArg.equals("1.4")) { //$NON-NLS-1$
-					this.options.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_1_4);
-				} else if (currentArg.equals("1.5") || currentArg.equals("5") || currentArg.equals("5.0")) { //$NON-NLS-1$//$NON-NLS-2$ //$NON-NLS-3$
-					this.options.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_1_5);
-				} else if (currentArg.equals("1.6") || currentArg.equals("6") || currentArg.equals("6.0")) { //$NON-NLS-1$//$NON-NLS-2$ //$NON-NLS-3$
-					this.options.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_1_6);
-				} else if (currentArg.equals("1.7") || currentArg.equals("7") || currentArg.equals("7.0")) { //$NON-NLS-1$//$NON-NLS-2$ //$NON-NLS-3$
-					this.options.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_1_7);
-				} else if (currentArg.equals("1.8") || currentArg.equals("8") || currentArg.equals("8.0")) { //$NON-NLS-1$//$NON-NLS-2$ //$NON-NLS-3$
-					this.options.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_1_8);
-				} else if (currentArg.equals("1.9") || currentArg.equals("9") || currentArg.equals("9.0")) { //$NON-NLS-1$//$NON-NLS-2$ //$NON-NLS-3$
-					this.options.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_9);
-				} else if (currentArg.equals("10") ||  currentArg.equals("10.0")) { //$NON-NLS-1$//$NON-NLS-2$
-					this.options.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_10);
-				} else if (currentArg.equals("11") ||  currentArg.equals("11.0")) { //$NON-NLS-1$//$NON-NLS-2$
-					this.options.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_11);
+				String version = optionStringToVersion(currentArg);
+				if (version != null) {
+					this.options.put(CompilerOptions.OPTION_Source, version);
 				} else {
 					throw new IllegalArgumentException(this.bind("configure.source", currentArg)); //$NON-NLS-1$
 				}
@@ -2926,6 +2914,10 @@ public void configure(String[] argv) {
 					}
 					this.limitedModules.add(tokenizer.nextToken().trim());
 				}
+				continue;
+			case INSIDE_MODULE_VERSION:
+				mode = DEFAULT;
+				this.moduleVersion = validateModuleVersion(currentArg);
 				continue;
 			case INSIDE_CLASSPATH_start:
 				mode = DEFAULT;
@@ -3027,9 +3019,9 @@ public void configure(String[] argv) {
 				}
 				continue;
 		}
-		
+
 		// default is input directory, if no custom destination path exists
-		// AspectJ Extension 
+		// AspectJ Extension
 		// see pr 60863.  All directories should have been dealt with at the AspectJ layer - if we have left
 		// anything to be processed here it is an error.
 		throw new IllegalArgumentException("unrecognized single argument: \""+currentArg+"\"");
@@ -3107,13 +3099,10 @@ public void configure(String[] argv) {
 			customDestinationPath = null;
 			currentSourceDirectory = null;
 		}
-		// MERGECONFLICT!!
-		throw new IllegalStateException(
-			    "unrecognized single argument: \""+currentArg+"\"");
-//		mode = DEFAULT;
-//		continue;
+		mode = DEFAULT;
+		continue;
  * */
- 
+
 	}
 	if (this.enablePreview) {
 		this.options.put(
@@ -3155,28 +3144,6 @@ public void configure(String[] argv) {
 			CompilerOptions.OPTION_ReportMissingJavadocTagsVisibility,
 			CompilerOptions.PRIVATE);
 	}
-//	// AspectJ Extension
-//    // old code:
-//    // if (printUsageRequired || (filesCount == 0 && classCount == 0)) {
-//    // new code:
-//	if (printUsageRequired || hasNoFiles(filesCount)) { // AspectJ Extension
-//    // End AspectJ Extension
-//			printUsage();
-//		if (usageSection ==  null) {
-//			printUsage(); // default
-//		} else {
-//			printUsage(usageSection);
-//		}
-//		this.proceed = false;
-//		return;
-//	}
-//	// AspectJ Extension
-//    // old code:
-//    // if (printUsageRequired || (filesCount == 0 && classCount == 0)) {
-//    // new code:
-//	if (printUsageRequired || hasNoFiles(filesCount)) { // AspectJ Extension
-//    // End AspectJ Extension
-		
 	if (printUsageRequired) { // AspectJ Extension remove trailing condition || (filesCount == 0 && classCount == 0)) {
 		if (usageSection ==  null) {
 			printUsage(); // default
@@ -3254,6 +3221,75 @@ public void configure(String[] argv) {
 		this.pendingErrors = null;
 	}
 }
+/** Translates any supported standard version starting at 1.3 up-to latest into the corresponding constant from CompilerOptions */
+private String optionStringToVersion(String currentArg) {
+	switch (currentArg) {
+		case "1.3": return CompilerOptions.VERSION_1_3; //$NON-NLS-1$
+		case "1.4": return CompilerOptions.VERSION_1_4; //$NON-NLS-1$
+		case "1.5": //$NON-NLS-1$
+		case "5": //$NON-NLS-1$
+		case "5.0": //$NON-NLS-1$
+			return CompilerOptions.VERSION_1_5;
+		case "1.6": //$NON-NLS-1$
+		case "6": //$NON-NLS-1$
+		case "6.0": //$NON-NLS-1$
+			return CompilerOptions.VERSION_1_6;
+		case "1.7": //$NON-NLS-1$
+		case "7": //$NON-NLS-1$
+		case "7.0": //$NON-NLS-1$
+			return CompilerOptions.VERSION_1_7;
+		case "1.8": //$NON-NLS-1$
+		case "8": //$NON-NLS-1$
+		case "8.0": //$NON-NLS-1$
+			return CompilerOptions.VERSION_1_8;
+		case "1.9": //$NON-NLS-1$
+		case "9": //$NON-NLS-1$
+		case "9.0": //$NON-NLS-1$
+			return CompilerOptions.VERSION_9;
+		case "10": //$NON-NLS-1$
+		case "10.0": //$NON-NLS-1$
+			return CompilerOptions.VERSION_10;
+		case "11": //$NON-NLS-1$
+		case "11.0": //$NON-NLS-1$
+			return CompilerOptions.VERSION_11;
+		case "12": //$NON-NLS-1$
+		case "12.0": //$NON-NLS-1$
+			return CompilerOptions.VERSION_12;
+		case "13": //$NON-NLS-1$
+		case "13.0": //$NON-NLS-1$
+			return CompilerOptions.VERSION_13;
+		case "14": //$NON-NLS-1$
+		case "14.0": //$NON-NLS-1$
+			return CompilerOptions.VERSION_14;
+		case "15": //$NON-NLS-1$
+		case "15.0": //$NON-NLS-1$
+			return CompilerOptions.VERSION_15;
+		case "16": //$NON-NLS-1$
+		case "16.0": //$NON-NLS-1$
+			return CompilerOptions.VERSION_16;
+		case "17": //$NON-NLS-1$
+		case "17.0": //$NON-NLS-1$
+			return CompilerOptions.VERSION_17;
+		default:
+			return null;
+	}
+}
+private String validateModuleVersion(String versionString) {
+	try {
+		Class<?> versionClass = Class.forName("java.lang.module.ModuleDescriptor$Version"); //$NON-NLS-1$
+		Method method = versionClass.getMethod("parse", String.class); //$NON-NLS-1$
+		try {
+			method.invoke(null, versionString);
+		} catch (InvocationTargetException e) {
+			if (e.getCause() instanceof IllegalArgumentException)
+				throw (IllegalArgumentException) e.getCause();
+		}
+	} catch (ClassNotFoundException | NoSuchMethodException | SecurityException | IllegalAccessException e) {
+		this.logger.logWarning(this.bind("configure.no.ModuleDescriptorVersionparse")); //$NON-NLS-1$
+	}
+	return versionString;
+}
+
 // AspectJ Extension - extracted and made public for use from AJ - this is a copy of the code that
 // was embedded in configure for handling the module def.
 public IModule getModuleDesc(String moduleArgument) {
@@ -3265,7 +3301,7 @@ public IModule getModuleDesc(String moduleArgument) {
 }
 // End AspectJ Extension
 private Parser getNewParser() {
-	return new Parser(new ProblemReporter(getHandlingPolicy(), 
+	return new Parser(new ProblemReporter(getHandlingPolicy(),
 			new CompilerOptions(this.options), getProblemFactory()), false);
 }
 private IModule extractModuleDesc(String fileName) {
@@ -3274,10 +3310,10 @@ private IModule extractModuleDesc(String fileName) {
 	// validated. Make sure the source level is set for the parser
 	Map<String,String> opts = new HashMap<String, String>(this.options);
 	opts.put(CompilerOptions.OPTION_Source, this.options.get(CompilerOptions.OPTION_Compliance));
-	Parser parser = new Parser(new ProblemReporter(getHandlingPolicy(), 
+	Parser parser = new Parser(new ProblemReporter(getHandlingPolicy(),
 			new CompilerOptions(opts), getProblemFactory()), false);
 	if (fileName.toLowerCase().endsWith(IModule.MODULE_INFO_JAVA)) {
-		
+
 		ICompilationUnit cu = new CompilationUnit(null, fileName, null);
 		CompilationResult compilationResult = new CompilationResult(cu, 0, 1, 10);
 		CompilationUnitDeclaration unit = parser.parse(cu, compilationResult);
@@ -3299,24 +3335,33 @@ private IModule extractModuleDesc(String fileName) {
 
 private static char[][] decodeIgnoreOptionalProblemsFromFolders(String folders) {
 	StringTokenizer tokenizer = new StringTokenizer(folders, File.pathSeparator);
-	char[][] result = new char[tokenizer.countTokens()][];
+	char[][] result = new char[2 * tokenizer.countTokens()][];
 	int count = 0;
 	while (tokenizer.hasMoreTokens()) {
 		String fileName = tokenizer.nextToken();
 		// relative folder names are created relative to the current user dir
 		File file = new File(fileName);
 		if (file.exists()) {
+			String absolutePath = file.getAbsolutePath();
+			result[count++] = absolutePath.toCharArray();
 			// if the file exists, we should try to use its canonical path
 			try {
-				result[count++] = file.getCanonicalPath().toCharArray();
+				String canonicalPath = file.getCanonicalPath();
+				if (!absolutePath.equals(canonicalPath)) {
+					result[count++] = canonicalPath.toCharArray();
+				}
 			} catch (IOException e) {
-				// if we got exception during canonicalization, fall back to the name that was specified
-				result[count++] = fileName.toCharArray();
+				// ignore
 			}
 		} else {
 			// if the file does not exist, use the name that was specified
 			result[count++] = fileName.toCharArray();
 		}
+	}
+	if (count < result.length) {
+		char[][] shortened = new char[count][];
+		System.arraycopy(result, 0, shortened, 0, count);
+		result = shortened;
 	}
 	return result;
 }
@@ -3398,6 +3443,9 @@ protected void enableAll(int severity) {
 		}
 	}
 	this.options.put(CompilerOptions.OPTION_TaskTags, Util.EMPTY_STRING);
+	if (newValue != null) {
+		this.options.remove(newValue);
+	}
 }
 protected void disableAll(int severity) {
 	String checkedValue = null;
@@ -3417,6 +3465,9 @@ protected void disableAll(int severity) {
 		if (entry.getValue().equals(checkedValue)) {
 			this.options.put(entry.getKey(), CompilerOptions.IGNORE);
 		}
+	}
+	if (checkedValue != null) {
+		this.options.put(checkedValue, CompilerOptions.IGNORE);
 	}
 	if (severity == ProblemSeverities.Warning) {
 		disableAll(ProblemSeverities.Info);
@@ -3454,7 +3505,7 @@ public CompilationUnit[] getCompilationUnits() {
 	String defaultEncoding = this.options.get(CompilerOptions.OPTION_Encoding);
 	if (Util.EMPTY_STRING.equals(defaultEncoding))
 		defaultEncoding = null;
-	
+
 	for (int round = 0; round < 2; round++) {
 		for (int i = 0; i < fileCount; i++) {
 			char[] charName = this.filenames[i].toCharArray();
@@ -3476,9 +3527,28 @@ public CompilationUnit[] getCompilationUnits() {
 					// if we got exception during canonicalization, fall back to the name that was specified
 					fileName = this.filenames[i];
 				}
+				Function<String,String> annotationPathProvider = null;
+				if (this.annotationsFromClasspath) {
+					annotationPathProvider = (String qualifiedTypeName) -> {
+						for (Classpath classpathEntry : this.checkedClasspaths) {
+							if (classpathEntry.hasAnnotationFileFor(qualifiedTypeName.replace('.', '/')))
+								return classpathEntry.getPath();
+						}
+						return null;
+					};
+				} else if (this.annotationPaths != null) {
+					annotationPathProvider = (String qualifiedTypeName) -> {
+						String eeaFileName = '/'+qualifiedTypeName.replace('.', '/')+ExternalAnnotationProvider.ANNOTATION_FILE_SUFFIX;
+						for (String annotationPath : this.annotationPaths) {
+							if (new File(annotationPath+eeaFileName).exists())
+								return annotationPath;
+						}
+						return null;
+					};
+				}
 				units[i] = new CompilationUnit(null, fileName, encoding, this.destinationPaths[i],
-						shouldIgnoreOptionalProblems(this.ignoreOptionalProblemsFromFolders, fileName.toCharArray()), 
-						this.modNames[i]);
+						shouldIgnoreOptionalProblems(this.ignoreOptionalProblemsFromFolders, fileName.toCharArray()),
+						this.modNames[i], annotationPathProvider);
 			}
 		}
 	}
@@ -3509,8 +3579,8 @@ public IErrorHandlingPolicy getHandlingPolicy() {
 private void setJavaHome(String javaHome) {
 	File release = new File(javaHome, "release"); //$NON-NLS-1$
 	Properties prop = new Properties();
-	try {
-		prop.load(new FileReader(release));
+	try (FileReader reader = new FileReader(release)) {
+		prop.load(reader);
 		String ver = prop.getProperty("JAVA_VERSION"); //$NON-NLS-1$
 		if (ver != null)
 			ver = ver.replace("\"", "");  //$NON-NLS-1$//$NON-NLS-2$
@@ -3532,7 +3602,7 @@ public File getJavaHome() {
 }
 
 public FileSystem getLibraryAccess() {
-	FileSystem nameEnvironment = new FileSystem(this.checkedClasspaths, this.filenames, 
+	FileSystem nameEnvironment = new FileSystem(this.checkedClasspaths, this.filenames,
 					this.annotationsFromClasspath && CompilerOptions.ENABLED.equals(this.options.get(CompilerOptions.OPTION_AnnotationBasedNullAnalysis)),
 					this.limitedModules);
 	nameEnvironment.module = this.module;
@@ -3612,12 +3682,8 @@ protected ArrayList<FileSystem.Classpath> handleModulepath(String arg) {
 		for (String path : modulePaths) {
 			File file = new File(path);
 			if (file.isDirectory()) {
-				// AspectJ bugfix... from:
-				// result =
-				// 		(ArrayList<Classpath>) ModuleFinder.findModules(file, null, getNewParser(), this.options, true);
-				// to:
-				result.addAll(ModuleFinder.findModules(file, null, getNewParser(), this.options, true, this.releaseVersion));
-				// End AspectJ
+				result.addAll(
+					ModuleFinder.findModules(file, null, getNewParser(), this.options, true, this.releaseVersion));
 			} else {
 				Classpath modulePath = ModuleFinder.findModule(file, null, getNewParser(), this.options, true, this.releaseVersion);
 				if (modulePath != null)
@@ -3858,10 +3924,30 @@ protected ArrayList<FileSystem.Classpath> handleExtdirs(ArrayList<String> extdir
 				}
 			}
 		}
-		return result; 
+		return result;
 	}
 
 	return FileSystem.EMPTY_CLASSPATH;
+}
+
+protected boolean isIgnored(IProblem problem) {
+	if (problem == null) {
+		return true;
+	}
+	if (problem.isError()) {
+		return false;
+	}
+	String key = problem.isInfo() ? CompilerOptions.INFO : CompilerOptions.WARNING;
+	if (CompilerOptions.IGNORE.equals(this.options.get(key))) {
+		return true;
+	}
+	if (this.ignoreOptionalProblemsFromFolders != null) {
+		char[] fileName = problem.getOriginatingFileName();
+		if (fileName != null) {
+			return shouldIgnoreOptionalProblems(this.ignoreOptionalProblemsFromFolders, fileName);
+		}
+	}
+	return false;
 }
 
 /*
@@ -4028,7 +4114,7 @@ private void handleErrorOrWarningToken(String token, boolean isEnabling, int sev
 						default: // no severity update
 					}
 				}
-				this.options.put(CompilerOptions.OPTION_ReportMissingEnumCaseDespiteDefault, 
+				this.options.put(CompilerOptions.OPTION_ReportMissingEnumCaseDespiteDefault,
 								 isEnabling ? CompilerOptions.ENABLED : CompilerOptions.DISABLED);
 				return;
 			} else if (token.equals("emptyBlock")) {//$NON-NLS-1$
@@ -4340,10 +4426,10 @@ private void handleErrorOrWarningToken(String token, boolean isEnabling, int sev
 				setSeverity(CompilerOptions.OPTION_ReportNonnullParameterAnnotationDropped, severity, isEnabling);
 				return;
 			}
-			
+
 			break;
 		case 'o' :
-			if (token.equals("over-sync") /*|| token.equals("syncOverride")*/) { //$NON-NLS-1$ 
+			if (token.equals("over-sync") /*|| token.equals("syncOverride")*/) { //$NON-NLS-1$
 				setSeverity(CompilerOptions.OPTION_ReportMissingSynchronizedOnInheritedMethod, severity, isEnabling);
 				return;
 			} else if (token.equals("over-ann")) { //$NON-NLS-1$
@@ -4398,7 +4484,7 @@ private void handleErrorOrWarningToken(String token, boolean isEnabling, int sev
 			} else if (token.equals("staticReceiver")) { //$NON-NLS-1$
 				setSeverity(CompilerOptions.OPTION_ReportNonStaticAccessToStatic, severity, isEnabling);
 				return;
-			} else 	if (/*token.equals("over-sync") ||*/ token.equals("syncOverride")) { //$NON-NLS-1$ 
+			} else 	if (/*token.equals("over-sync") ||*/ token.equals("syncOverride")) { //$NON-NLS-1$
 				setSeverity(CompilerOptions.OPTION_ReportMissingSynchronizedOnInheritedMethod, severity, isEnabling);
 				return;
 			} else if (token.equals("semicolon")) {//$NON-NLS-1$
@@ -4461,7 +4547,7 @@ private void handleErrorOrWarningToken(String token, boolean isEnabling, int sev
 				this.options.put(
 					CompilerOptions.OPTION_TaskTags,
 					isEnabling ? taskTags : Util.EMPTY_STRING);
-				
+
 				setSeverity(CompilerOptions.OPTION_ReportTasks, severity, isEnabling);
 				return;
 			} else if (token.equals("typeHiding")) { //$NON-NLS-1$
@@ -4528,14 +4614,18 @@ private void handleErrorOrWarningToken(String token, boolean isEnabling, int sev
 				setSeverity(CompilerOptions.OPTION_ReportUnqualifiedFieldAccess, severity, isEnabling);
 				return;
 			} else if (token.equals("unused")) { //$NON-NLS-1$
-				setSeverity(CompilerOptions.OPTION_ReportUnusedLocal, severity, isEnabling);
-				setSeverity(CompilerOptions.OPTION_ReportUnusedParameter, severity, isEnabling);
-				setSeverity(CompilerOptions.OPTION_ReportUnusedImport, severity, isEnabling);
-				setSeverity(CompilerOptions.OPTION_ReportUnusedPrivateMember, severity, isEnabling);
-				setSeverity(CompilerOptions.OPTION_ReportUnusedDeclaredThrownException, severity, isEnabling);
-				setSeverity(CompilerOptions.OPTION_ReportUnusedLabel, severity, isEnabling);
-				setSeverity(CompilerOptions.OPTION_ReportUnusedTypeArgumentsForMethodInvocation, severity, isEnabling);
+				setSeverity(CompilerOptions.OPTION_ReportDeadCode, severity, isEnabling);
+				setSeverity(CompilerOptions.OPTION_ReportRedundantSuperinterface, severity, isEnabling);
 				setSeverity(CompilerOptions.OPTION_ReportRedundantSpecificationOfTypeArguments, severity, isEnabling);
+				setSeverity(CompilerOptions.OPTION_ReportUnusedDeclaredThrownException, severity, isEnabling);
+				setSeverity(CompilerOptions.OPTION_ReportUnusedExceptionParameter, severity, isEnabling);
+				setSeverity(CompilerOptions.OPTION_ReportUnusedImport, severity, isEnabling);
+				setSeverity(CompilerOptions.OPTION_ReportUnusedLabel, severity, isEnabling);
+				setSeverity(CompilerOptions.OPTION_ReportUnusedLocal, severity, isEnabling);
+				setSeverity(CompilerOptions.OPTION_ReportUnusedObjectAllocation, severity,isEnabling);
+				setSeverity(CompilerOptions.OPTION_ReportUnusedParameter, severity, isEnabling);
+				setSeverity(CompilerOptions.OPTION_ReportUnusedPrivateMember, severity, isEnabling);
+				setSeverity(CompilerOptions.OPTION_ReportUnusedTypeArgumentsForMethodInvocation, severity, isEnabling);
 				setSeverity(CompilerOptions.OPTION_ReportUnusedTypeParameter, severity,isEnabling);
 				return;
 			} else if (token.equals("unusedParam")) { //$NON-NLS-1$
@@ -4638,12 +4728,12 @@ protected void initializeAnnotationProcessorManager() {
 	String className = "org.aspectj.org.eclipse.jdt.internal.compiler.apt.dispatch.BatchAnnotationProcessorManager"; //$NON-NLS-1$
 	try {
 		Class<?> c = Class.forName(className);
-		AbstractAnnotationProcessorManager annotationManager = (AbstractAnnotationProcessorManager) c.newInstance();
+		AbstractAnnotationProcessorManager annotationManager = (AbstractAnnotationProcessorManager) c.getDeclaredConstructor().newInstance();
 		annotationManager.configure(this, this.expandedCommandLine);
 		annotationManager.setErr(this.err);
 		annotationManager.setOut(this.out);
 		this.batchCompiler.annotationProcessorManager = annotationManager;
-	} catch (ClassNotFoundException | InstantiationException e) {
+	} catch (ClassNotFoundException | InstantiationException | NoSuchMethodException | InvocationTargetException e) {
 		this.logger.logUnavaibleAPT(className);
 		throw new org.aspectj.org.eclipse.jdt.internal.compiler.problem.AbortCompilation();
 	} catch (IllegalAccessException e) {
@@ -4799,7 +4889,7 @@ public void printUsage() {
 	printUsage("misc.usage"); //$NON-NLS-1$
 }
 private void printUsage(String sectionID) {
-	this.logger.logUsage(
+	String usageMessage = ( // AspectJ: assign usage message to variable, so we can patch it
 		this.bind(
 			sectionID,
 			new String[] {
@@ -4808,6 +4898,24 @@ private void printUsage(String sectionID) {
 				this.bind("compiler.version"), //$NON-NLS-1$
 				this.bind("compiler.copyright") //$NON-NLS-1$
 			}));
+	// AspectJ Extension
+	if (sectionID.equals("misc.usage")) {
+		String aspectJSpecificOptions = this.bind("misc.usage.aspectj"); //$NON-NLS-1$
+		StringBuilder buffer = new StringBuilder(usageMessage.length() + aspectJSpecificOptions.length());
+		for (String line : usageMessage.split("\n")) {
+			// Patch AspectJ-specific compiler options into usage message
+			if (line.contains("Classpath options:"))
+				buffer.append(aspectJSpecificOptions);
+			// Remove information that "-X" is an ignored option
+			if (!line.contains("-X") && !line.contains("print non-standard options and exit (ignored)"))
+				buffer.append(line).append('\n');
+		}
+		usageMessage = buffer.toString();
+	}
+	// Remove repetitive whitespace lines, e.g. when the copyright is an empty string on a separate line
+	usageMessage = usageMessage.replaceAll("([ \t]*\r?\n){2,}", "\n\n");
+	this.logger.logUsage(usageMessage);
+	// End AspectJ Extension
 	this.logger.flush();
 }
 // AspectJ: from private to protected
@@ -4837,6 +4945,7 @@ protected void initRootModules(LookupEnvironment environment, FileSystem fileSys
 			}
 		}
 	}
+	environment.moduleVersion = this.moduleVersion;
 }
 private ReferenceBinding[] processClassNames(LookupEnvironment environment) {
 	// check for .class file presence in case of apt processing
@@ -4863,12 +4972,6 @@ private ReferenceBinding[] processClassNames(LookupEnvironment environment) {
 				currentName = currentName.substring(idx + 1);
 			}
 			typeNames[i] = currentName;
-		}
-		for (ModuleBinding mod : modSet) {
-			mod.getExports();
-			mod.getRequires();
-			mod.getOpens();
-			mod.getServices();
 		}
 	}
 
@@ -5111,7 +5214,7 @@ private int processPaths(String[] args, int index, String currentArg, ArrayList<
 				this.bind("configure.unexpectedBracket", //$NON-NLS-1$
 							currentArg));
 	} else {
-		StringBuffer currentPath = new StringBuffer(currentArg);
+		StringBuilder currentPath = new StringBuilder(currentArg);
 		while (true) {
 			if (localIndex >= args.length) {
 				throw new IllegalArgumentException(
@@ -5169,7 +5272,7 @@ private int processPaths(String[] args, int index, String currentArg, String[] p
 	if (count == 0) {
 		paths[0] = currentArg;
 	} else {
-		StringBuffer currentPath = new StringBuffer(currentArg);
+		StringBuilder currentPath = new StringBuilder(currentArg);
 		while (true) {
 			localIndex++;
 			if (localIndex >= args.length) {
@@ -5219,6 +5322,7 @@ public void relocalize() {
 }
 
 private void relocalize(Locale locale) {
+	locale = aspectjLocale;  // AspectJ: Set fixed 'aspectj' locale
 	this.compilerLocale = locale;
 	try {
 		this.bundle = ResourceBundleFactory.getBundle(locale);
@@ -5319,7 +5423,7 @@ protected void setPaths(ArrayList<String> bootclasspaths,
 		}
 	}
 }
-protected final static boolean shouldIgnoreOptionalProblems(char[][] folderNames, char[] fileName) {
+public final static boolean shouldIgnoreOptionalProblems(char[][] folderNames, char[] fileName) {
 	if (folderNames == null || fileName == null) {
 		return false;
 	}
@@ -5486,11 +5590,13 @@ protected void validateOptions(boolean didSpecifyCompliance) {
 							|| CompilerOptions.VERSION_1_6.equals(source)) {
 						this.options.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_1_6);
 					} else {
-						if (CompilerOptions.versionToJdkLevel(source) > 0)
+						// 1.3 is the lowest version that can be specified as -source
+						// The following check will ensure '0' is ignored.
+						if (CompilerOptions.versionToJdkLevel(source) >= ClassFileConstants.JDK1_7)
 							this.options.put(CompilerOptions.OPTION_TargetPlatform, source);
 					}
 				} else {
-					if (CompilerOptions.versionToJdkLevel(version) > 0) {
+					if (CompilerOptions.versionToJdkLevel(version) > ClassFileConstants.JDK10) {
 						this.options.put(CompilerOptions.OPTION_Source, version);
 						this.options.put(CompilerOptions.OPTION_TargetPlatform, version);
 					}
@@ -5523,7 +5629,7 @@ protected void validateOptions(boolean didSpecifyCompliance) {
 			if (!didSpecifyCompliance) this.options.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_10);
 			if (!this.didSpecifyTarget) this.options.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_10);
 		} else {
-			if (CompilerOptions.versionToJdkLevel(version) > 0) {
+			if (CompilerOptions.versionToJdkLevel(version) > ClassFileConstants.JDK10) {
 				if (!didSpecifyCompliance) this.options.put(CompilerOptions.OPTION_Compliance, version);
 				if (!this.didSpecifyTarget) this.options.put(CompilerOptions.OPTION_TargetPlatform, version);
 			}
