@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2016 IBM Corporation and others.
+ * Copyright (c) 2000, 2021 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -76,9 +76,9 @@ protected static Object convertConstant(Constant constant) {
 		case TypeIds.T_char :
 			return Character.valueOf(constant.charValue());
 		case TypeIds.T_double :
-			return new Double(constant.doubleValue());
+			return Double.valueOf(constant.doubleValue());
 		case TypeIds.T_float :
-			return new Float(constant.floatValue());
+			return Float.valueOf(constant.floatValue());
 		case TypeIds.T_int :
 			return Integer.valueOf(constant.intValue());
 		case TypeIds.T_long :
@@ -144,8 +144,8 @@ public String[] getCategories() throws JavaModelException {
  */
 @Override
 public IClassFile getClassFile() {
-	IJavaElement element = getParent();
-	while (element instanceof IMember) {
+	JavaElement element = getParent();
+	while (element instanceof Member) {
 		element= element.getParent();
 	}
 	if (element instanceof IClassFile) {
@@ -158,7 +158,7 @@ public IClassFile getClassFile() {
  */
 @Override
 public IType getDeclaringType() {
-	JavaElement parentElement = (JavaElement)getParent();
+	JavaElement parentElement = getParent();
 	if (parentElement.getElementType() == TYPE) {
 		return (IType) parentElement;
 	}
@@ -185,17 +185,17 @@ public IJavaElement getHandleFromMemento(String token, MementoTokenizer memento,
 				return this;
 			if (!memento.hasMoreTokens()) return this;
 			String interphase = memento.nextToken();
-			if (!memento.hasMoreTokens() || memento.nextToken() != MementoTokenizer.COUNT) 
+			if (!memento.hasMoreTokens() || memento.nextToken() != MementoTokenizer.COUNT)
 				return this;
 			int sourceStart = Integer.parseInt(memento.nextToken());
-			if (!memento.hasMoreTokens() || memento.nextToken() != MementoTokenizer.COUNT) 
+			if (!memento.hasMoreTokens() || memento.nextToken() != MementoTokenizer.COUNT)
 				return this;
 			int sourceEnd = Integer.parseInt(memento.nextToken());
-			if (!memento.hasMoreTokens() || memento.nextToken() != MementoTokenizer.COUNT) 
+			if (!memento.hasMoreTokens() || memento.nextToken() != MementoTokenizer.COUNT)
 				return this;
 			int arrowPosition = Integer.parseInt(memento.nextToken());
 			LambdaExpression expression = LambdaFactory.createLambdaExpression(this, interphase, sourceStart, sourceEnd, arrowPosition);
-			if (!memento.hasMoreTokens() || (token = memento.nextToken()) != MementoTokenizer.LAMBDA_METHOD) 
+			if (!memento.hasMoreTokens() || (token = memento.nextToken()) != MementoTokenizer.LAMBDA_METHOD)
 				return expression;
 			return expression.getHandleFromMemento(token, memento, workingCopyOwner);
 		case JEM_TYPE:
@@ -247,7 +247,7 @@ public IJavaElement getHandleFromMemento(String token, MementoTokenizer memento,
 			int flags = Integer.parseInt(memento.nextToken());
 			memento.nextToken(); // JEM_COUNT
 			if (!memento.hasMoreTokens()) return this;
-			boolean isParameter = Boolean.valueOf(memento.nextToken()).booleanValue();
+			boolean isParameter = Boolean.parseBoolean(memento.nextToken());
 			return new LocalVariable(this, varName, declarationStart, declarationEnd, nameStart, nameEnd, typeSignature, null, flags, isParameter);
 		case JEM_TYPE_PARAMETER:
 			if (!memento.hasMoreTokens()) return this;
@@ -329,6 +329,7 @@ public ISourceRange getJavadocRange() throws JavaModelException {
 						break;
 					case ITerminalSymbols.TokenNameCOMMENT_LINE :
 					case ITerminalSymbols.TokenNameCOMMENT_BLOCK :
+					case ITerminalSymbols.TokenNameCOMMA:
 						terminal= scanner.getNextToken();
 						continue loop;
 					default :
@@ -338,9 +339,7 @@ public ISourceRange getJavadocRange() throws JavaModelException {
 			if (docOffset != -1) {
 				return new SourceRange(docOffset + start, docEnd - docOffset);
 			}
-		} catch (InvalidInputException ex) {
-			// try if there is inherited Javadoc
-		} catch (IndexOutOfBoundsException e) {
+		} catch (InvalidInputException | IndexOutOfBoundsException e) {
 			// https://bugs.eclipse.org/bugs/show_bug.cgi?id=305001
 		}
 	}
@@ -390,7 +389,7 @@ protected boolean isMainMethod(IMethod method) throws JavaModelException {
 		int flags= method.getFlags();
 		IType declaringType = null;
 		if (Flags.isStatic(flags) &&
-				(Flags.isPublic(flags) || 
+				(Flags.isPublic(flags) ||
 						((declaringType = getDeclaringType()) != null && declaringType.isInterface()))) {
 			String[] paramTypes= method.getParameterTypes();
 			if (paramTypes.length == 1) {
@@ -416,7 +415,7 @@ public String readableName() {
 	IJavaElement declaringType = getDeclaringType();
 	if (declaringType != null) {
 		String declaringName = ((JavaElement) getDeclaringType()).readableName();
-		StringBuffer buffer = new StringBuffer(declaringName);
+		StringBuilder buffer = new StringBuilder(declaringName);
 		buffer.append('.');
 		buffer.append(getElementName());
 		return buffer.toString();
