@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2016 IBM Corporation and others.
+ * Copyright (c) 2000, 2021 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -75,9 +75,9 @@ public Object getConstant() throws JavaModelException {
 			}
 			constant = Character.valueOf(constantSourceChars[1]);
 		} else if (signature.equals(Signature.SIG_DOUBLE)) {
-			constant = new Double(constantSource);
+			constant = Double.valueOf(constantSource);
 		} else if (signature.equals(Signature.SIG_FLOAT)) {
-			constant = new Float(constantSource);
+			constant = Float.valueOf(constantSource);
 		} else if (signature.equals(Signature.SIG_LONG)) {
 			if (constantSource.endsWith("L") || constantSource.endsWith("l")) { //$NON-NLS-1$ //$NON-NLS-2$
 				int index = constantSource.lastIndexOf("L");//$NON-NLS-1$
@@ -126,13 +126,13 @@ protected char getHandleMementoDelimiter() {
 }
 
 @Override
-public IJavaElement getPrimaryElement(boolean checkOwner) {
+public JavaElement getPrimaryElement(boolean checkOwner) {
 	if (checkOwner) {
 		CompilationUnit cu = (CompilationUnit)getAncestor(COMPILATION_UNIT);
 		if (cu.isPrimary()) return this;
 	}
-	IJavaElement primaryParent =this.parent.getPrimaryElement(false);
-	return ((IType)primaryParent).getField(this.name);
+	IJavaElement primaryParent =this.getParent().getPrimaryElement(false);
+	return (JavaElement)((IType)primaryParent).getField(this.name);
 }
 /**
  * @see IField
@@ -154,7 +154,7 @@ public boolean isResolved() {
 }
 @Override
 public JavaElement resolved(Binding binding) {
-	SourceRefElement resolvedHandle = new ResolvedSourceField(this.parent, this.name, new String(binding.computeUniqueKey()));
+	SourceRefElement resolvedHandle = new ResolvedSourceField(this.getParent(), this.name, new String(binding.computeUniqueKey()));
 	resolvedHandle.occurrenceCount = this.occurrenceCount;
 	return resolvedHandle;
 }
@@ -178,5 +178,10 @@ protected void toStringInfo(int tab, StringBuffer buffer, Object info, boolean s
 			buffer.append("<JavaModelException in toString of " + getElementName()); //$NON-NLS-1$
 		}
 	}
+}
+@Override
+public boolean isRecordComponent() throws JavaModelException {
+	SourceFieldElementInfo info = (SourceFieldElementInfo) getElementInfo();
+	return info.isRecordComponent;
 }
 }
