@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2018 IBM Corporation and others.
+ * Copyright (c) 2000, 2021 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -41,6 +41,7 @@ import org.aspectj.org.eclipse.jdt.core.dom.WildcardType;
 import org.aspectj.org.eclipse.jdt.core.util.IClassFileAttribute;
 import org.aspectj.org.eclipse.jdt.core.util.IClassFileReader;
 import org.aspectj.org.eclipse.jdt.core.util.ICodeAttribute;
+import org.aspectj.org.eclipse.jdt.core.util.IComponentInfo;
 import org.aspectj.org.eclipse.jdt.core.util.IFieldInfo;
 import org.aspectj.org.eclipse.jdt.core.util.IMethodInfo;
 import org.aspectj.org.eclipse.jdt.internal.compiler.ast.AbstractMethodDeclaration;
@@ -61,6 +62,7 @@ import org.aspectj.org.eclipse.jdt.internal.compiler.impl.Constant;
 import org.aspectj.org.eclipse.jdt.internal.compiler.lookup.Binding;
 import org.aspectj.org.eclipse.jdt.internal.compiler.lookup.FieldBinding;
 import org.aspectj.org.eclipse.jdt.internal.compiler.lookup.MethodBinding;
+import org.aspectj.org.eclipse.jdt.internal.compiler.lookup.RecordComponentBinding;
 import org.aspectj.org.eclipse.jdt.internal.compiler.lookup.ReferenceBinding;
 import org.aspectj.org.eclipse.jdt.internal.compiler.lookup.TypeBinding;
 import org.aspectj.org.eclipse.jdt.internal.compiler.lookup.TypeIds;
@@ -300,7 +302,7 @@ public class Util {
 		return compoundChars;
 	}
 	public static String concatenateName(String name1, String name2, char separator) {
-		StringBuffer buf= new StringBuffer();
+		StringBuilder buf= new StringBuilder();
 		if (name1 != null && name1.length() > 0) {
 			buf.append(name1);
 		}
@@ -336,7 +338,7 @@ public class Util {
 	 * @return the concatenation of the given array parts using the given separator between each part
 	 */
 	public static final String concatWith(String[] array, char separator) {
-		StringBuffer buffer = new StringBuffer();
+		StringBuilder buffer = new StringBuilder();
 		for (int i = 0, length = array.length; i < length; i++) {
 			buffer.append(array[i]);
 			if (i < length - 1)
@@ -386,7 +388,7 @@ public class Util {
 
 		if (array == null || array.length == 0) return name;
 		if (name == null || name.length() == 0) return concatWith(array, separator);
-		StringBuffer buffer = new StringBuffer();
+		StringBuilder buffer = new StringBuilder();
 		for (int i = 0, length = array.length; i < length; i++) {
 			buffer.append(array[i]);
 			buffer.append(separator);
@@ -395,6 +397,21 @@ public class Util {
 		return buffer.toString();
 
 	}
+
+	public static final char[] concat(char[] first, char[] second) {
+		if (first == null)
+			return second;
+		if (second == null)
+			return first;
+
+		int length1 = first.length;
+		int length2 = second.length;
+		char[] result = new char[length1 + length2];
+		System.arraycopy(first, 0, result, 0, length1);
+		System.arraycopy(second, 0, result, length1, length2);
+		return result;
+	}
+
 	/**
 	 * Converts a type signature from the IBinaryType representation to the DC representation.
 	 */
@@ -427,9 +444,7 @@ public class Util {
 		try {
 			edit.apply(document, TextEdit.NONE);
 			return document.get();
-		} catch (MalformedTreeException e) {
-			e.printStackTrace();
-		} catch (BadLocationException e) {
+		} catch (MalformedTreeException | BadLocationException e) {
 			e.printStackTrace();
 		}
 		return original;
@@ -744,6 +759,15 @@ public class Util {
 		}
 		return null;
 	}
+	public static IClassFileAttribute getAttribute(IComponentInfo componentInfo, char[] attributeName) {
+		IClassFileAttribute[] attributes = componentInfo.getAttributes();
+		for (int i = 0, max = attributes.length; i < max; i++) {
+			if (CharOperation.equals(attributes[i].getAttributeName(), attributeName)) {
+				return attributes[i];
+			}
+		}
+		return null;
+	}
 
 	public static IClassFileAttribute getAttribute(IMethodInfo methodInfo, char[] attributeName) {
 		IClassFileAttribute[] attributes = methodInfo.getAttributes();
@@ -881,11 +905,7 @@ public class Util {
 			if (reader != null) {
 				return reader.getVersion();
 			}
-		} catch (CoreException e) {
-			// ignore
-		} catch(ClassFormatException e) {
-			// ignore
-		} catch(IOException e) {
+		} catch(CoreException | ClassFormatException | IOException e) {
 			// ignore
 		}
 		return 0;
@@ -928,7 +948,7 @@ public class Util {
 				if (lineSeparator != null)
 					return lineSeparator;
 			}
-	
+
 			// line delimiter in workspace preference
 			scopeContext= new IScopeContext[] { InstanceScope.INSTANCE };
 			lineSeparator = Platform.getPreferencesService().getString(Platform.PI_RUNTIME, Platform.PREF_LINE_SEPARATOR, null, scopeContext);
@@ -1044,7 +1064,7 @@ public class Util {
 
 	/**
 	 * Encode the argument by doubling the '#' if present into the argument value.
-	 * 
+	 *
 	 * <p>This stores the encoded argument into the given buffer.</p>
 	 *
 	 * @param argument the given argument
@@ -1154,7 +1174,7 @@ public class Util {
 			throw new JavaModelException(e);
 		}
 		try {
-			return org.aspectj.org.eclipse.jdt.internal.compiler.util.Util.getInputStreamAsByteArray(stream, -1);
+			return org.aspectj.org.eclipse.jdt.internal.compiler.util.Util.getInputStreamAsByteArray(stream);
 		} catch (IOException e) {
 			throw new JavaModelException(e, IJavaModelStatusConstants.IO_EXCEPTION);
 		} finally {
@@ -1182,25 +1202,6 @@ public class Util {
 	}
 
 	public static char[] getResourceContentsAsCharArray(IFile file, String encoding) throws JavaModelException {
-		// Get file length
-		// workaround https://bugs.eclipse.org/bugs/show_bug.cgi?id=130736 by using java.io.File if possible
-		IPath location = file.getLocation();
-		long length;
-		if (location == null) {
-			// non local file
-			try {
-				URI locationURI = file.getLocationURI();
-				if (locationURI == null)
-					throw new CoreException(new Status(IStatus.ERROR, JavaCore.PLUGIN_ID, Messages.bind(Messages.file_notFound, file.getFullPath().toString())));
-				length = EFS.getStore(locationURI).fetchInfo().getLength();
-			} catch (CoreException e) {
-				throw new JavaModelException(e, IJavaModelStatusConstants.ELEMENT_DOES_NOT_EXIST);
-			}
-		} else {
-			// local file
-			length = location.toFile().length();
-		}
-
 		// Get resource contents
 		InputStream stream= null;
 		try {
@@ -1209,7 +1210,7 @@ public class Util {
 			throw new JavaModelException(e, IJavaModelStatusConstants.ELEMENT_DOES_NOT_EXIST);
 		}
 		try {
-			return org.aspectj.org.eclipse.jdt.internal.compiler.util.Util.getInputStreamAsCharArray(stream, (int) length, encoding);
+			return org.aspectj.org.eclipse.jdt.internal.compiler.util.Util.getInputStreamAsCharArray(stream, encoding);
 		} catch (IOException e) {
 			throw new JavaModelException(e, IJavaModelStatusConstants.IO_EXCEPTION);
 		} finally {
@@ -1353,6 +1354,18 @@ public class Util {
 	public static JavaElement getUnresolvedJavaElement(FieldBinding binding, WorkingCopyOwner workingCopyOwner, BindingsToNodesMap bindingsToNodes) {
 		if (binding.declaringClass == null) return null; // array length
 		JavaElement unresolvedJavaElement = getUnresolvedJavaElement(binding.declaringClass, workingCopyOwner, bindingsToNodes);
+		if (unresolvedJavaElement == null || unresolvedJavaElement.getElementType() != IJavaElement.TYPE) {
+			return null;
+		}
+		return (JavaElement) ((IType) unresolvedJavaElement).getField(String.valueOf(binding.name));
+	}
+
+	/**
+	 * Return the java element corresponding to the given compiler binding.
+	 */
+	public static JavaElement getUnresolvedJavaElement(RecordComponentBinding binding, WorkingCopyOwner workingCopyOwner, BindingsToNodesMap bindingsToNodes) {
+		if (binding.declaringRecord == null) return null; // array length
+		JavaElement unresolvedJavaElement = getUnresolvedJavaElement(binding.declaringRecord, workingCopyOwner, bindingsToNodes);
 		if (unresolvedJavaElement == null || unresolvedJavaElement.getElementType() != IJavaElement.TYPE) {
 			return null;
 		}
@@ -1974,7 +1987,7 @@ public class Util {
 	 * @param complianceLevel the compliance level
 	 */
 	public static String packageName(IPath pkgPath, String sourceLevel, String complianceLevel) {
-		StringBuffer pkgName = new StringBuffer(IPackageFragment.DEFAULT_PACKAGE_NAME);
+		StringBuilder pkgName = new StringBuilder(IPackageFragment.DEFAULT_PACKAGE_NAME);
 		for (int j = 0, max = pkgPath.segmentCount(); j < max; j++) {
 			String segment = pkgPath.segment(j);
 			if (!isValidFolderNameForPackage(segment, sourceLevel, complianceLevel)) {
@@ -2446,7 +2459,7 @@ public class Util {
 	 * Converts a char[][] to String, where segments are separated by '.'.
 	 */
 	public static String toString(char[][] c) {
-		StringBuffer sb = new StringBuffer();
+		StringBuilder sb = new StringBuilder();
 		for (int i = 0, max = c.length; i < max; ++i) {
 			if (i != 0) sb.append('.');
 			sb.append(c[i]);
@@ -2459,7 +2472,7 @@ public class Util {
 	 */
 	public static String toString(char[][] c, char[] d) {
 		if (c == null) return new String(d);
-		StringBuffer sb = new StringBuffer();
+		StringBuilder sb = new StringBuilder();
 		for (int i = 0, max = c.length; i < max; ++i) {
 			sb.append(c[i]);
 			sb.append('.');
@@ -2521,11 +2534,11 @@ public class Util {
 		int length = string.length;
 		// need a minimum 2 char
 		if (start >= length - 1) {
-			throw raiseIllegalSignatureException(string, start);
+			throw newIllegalArgumentException(string, start);
 		}
 		char c = string[start];
 		if (c != Signature.C_ARRAY) {
-			throw raiseUnexpectedCharacterException(string, start, c);
+			throw newUnexpectedCharacterException(string, start, c);
 		}
 
 		int index = start;
@@ -2533,7 +2546,7 @@ public class Util {
 		while(c == Signature.C_ARRAY) {
 			// need a minimum 2 char
 			if (index >= length - 1) {
-				throw raiseIllegalSignatureException(string, start);
+				throw newIllegalArgumentException(string, start);
 			}
 			c = string[++index];
 		}
@@ -2723,7 +2736,7 @@ public class Util {
 		}
 		return signature;
 	}
-	
+
 	private static String[] typeSignatures(TypeReference[] types) {
 		int length = types.length;
 		String[] typeSignatures = new String[length];
@@ -2833,7 +2846,7 @@ public class Util {
 		char[] typeName = org.aspectj.org.eclipse.jdt.core.Signature.toCharArray(CharOperation.replaceOnCopy(binaryAnnotation.getTypeName(), '/', '.'));
 		return new Annotation(parent, new String(typeName), memberValuePairName);
 	}
-	
+
 	public static Object getAnnotationMemberValue(JavaElement parent, MemberValuePair memberValuePair, Object binaryValue) {
 		if (binaryValue instanceof Constant) {
 			return getAnnotationMemberValue(memberValuePair, (Constant) binaryValue);
@@ -2904,10 +2917,10 @@ public class Util {
 				return Character.valueOf(constant.charValue());
 			case TypeIds.T_float :
 				memberValuePair.valueKind = IMemberValuePair.K_FLOAT;
-				return new Float(constant.floatValue());
+				return Float.valueOf(constant.floatValue());
 			case TypeIds.T_double :
 				memberValuePair.valueKind = IMemberValuePair.K_DOUBLE;
-				return new Double(constant.doubleValue());
+				return Double.valueOf(constant.doubleValue());
 			case TypeIds.T_boolean :
 				memberValuePair.valueKind = IMemberValuePair.K_BOOLEAN;
 				return Boolean.valueOf(constant.booleanValue());
@@ -2922,7 +2935,7 @@ public class Util {
 				return null;
 		}
 	}
-	
+
 	/*
 	 * Creates a member value from the given constant in case of negative numerals,
 	 * and sets the valueKind on the given memberValuePair
@@ -2938,10 +2951,10 @@ public class Util {
 				return Integer.valueOf(constant.intValue() * -1);
 			case TypeIds.T_float :
 				memberValuePair.valueKind = IMemberValuePair.K_FLOAT;
-				return new Float(constant.floatValue() * -1.0f);
+				return Float.valueOf(constant.floatValue() * -1.0f);
 			case TypeIds.T_double :
 				memberValuePair.valueKind = IMemberValuePair.K_DOUBLE;
-				return new Double(constant.doubleValue() * -1.0);
+				return Double.valueOf(constant.doubleValue() * -1.0);
 			case TypeIds.T_long :
 				memberValuePair.valueKind = IMemberValuePair.K_LONG;
 				return Long.valueOf(constant.longValue() * -1L);
@@ -3029,7 +3042,7 @@ public class Util {
 	public static char[] toAnchor(int startingIndex, char[] methodSignature, char[] methodName, boolean isVargArgs) {
 		int firstParen = CharOperation.indexOf(Signature.C_PARAM_START, methodSignature);
 		if (firstParen == -1) {
-			throw new IllegalArgumentException(new String(methodSignature));
+			throw new IllegalArgumentException(String.valueOf(methodSignature));
 		}
 
 		StringBuffer buffer = new StringBuffer(methodSignature.length + 10);
@@ -3062,7 +3075,7 @@ public class Util {
 	private static int appendTypeSignatureForAnchor(char[] string, int start, StringBuffer buffer, boolean isVarArgs) {
 		// need a minimum 1 char
 		if (start >= string.length) {
-			throw raiseIllegalSignatureException(string, start);
+			throw newIllegalArgumentException(string, start);
 		}
 		char c = string[start];
 		if (isVarArgs) {
@@ -3086,7 +3099,7 @@ public class Util {
 				case Signature.C_CAPTURE:
 				default:
 					// a var args is an array type
-					throw raiseUnexpectedCharacterException(string, start, c);
+					throw newUnexpectedCharacterException(string, start, c);
 			}
 		} else {
 			switch (c) {
@@ -3132,7 +3145,7 @@ public class Util {
 				case Signature.C_SUPER:
 					return appendTypeArgumentSignatureForAnchor(string, start, buffer);
 				default :
-					throw raiseIllegalSignatureException(string, start);
+					throw newIllegalArgumentException(string, start);
 			}
 		}
 	}
@@ -3140,7 +3153,7 @@ public class Util {
 	private static int appendTypeArgumentSignatureForAnchor(char[] string, int start, StringBuffer buffer) {
 		// need a minimum 1 char
 		if (start >= string.length) {
-			throw raiseIllegalSignatureException(string, start);
+			throw newIllegalArgumentException(string, start);
 		}
 		char c = string[start];
 		switch(c) {
@@ -3157,11 +3170,11 @@ public class Util {
 	private static int appendCaptureTypeSignatureForAnchor(char[] string, int start, StringBuffer buffer) {
 		// need a minimum 2 char
 		if (start >= string.length - 1) {
-			throw raiseIllegalSignatureException(string, start);
+			throw newIllegalArgumentException(string, start);
 		}
 		char c = string[start];
 		if (c != Signature.C_CAPTURE) {
-			throw raiseUnexpectedCharacterException(string, start, c);
+			throw newUnexpectedCharacterException(string, start, c);
 		}
 		return appendTypeArgumentSignatureForAnchor(string, start + 1, buffer);
 	}
@@ -3169,11 +3182,11 @@ public class Util {
 		int length = string.length;
 		// need a minimum 2 char
 		if (start >= length - 1) {
-			throw raiseIllegalSignatureException(string, start);
+			throw newIllegalArgumentException(string, start);
 		}
 		char c = string[start];
 		if (c != Signature.C_ARRAY) {
-			throw raiseUnexpectedCharacterException(string, start, c);
+			throw newUnexpectedCharacterException(string, start, c);
 		}
 
 		int index = start;
@@ -3181,7 +3194,7 @@ public class Util {
 		while(c == Signature.C_ARRAY) {
 			// need a minimum 2 char
 			if (index >= length - 1) {
-				throw raiseIllegalSignatureException(string, start);
+				throw newIllegalArgumentException(string, start);
 			}
 			c = string[++index];
 		}
@@ -3202,17 +3215,17 @@ public class Util {
 	private static int appendClassTypeSignatureForAnchor(char[] string, int start, StringBuffer buffer) {
 		// need a minimum 3 chars "Lx;"
 		if (start >= string.length - 2) {
-			throw raiseIllegalSignatureException(string, start);
+			throw newIllegalArgumentException(string, start);
 		}
 		// must start in "L" or "Q"
 		char c = string[start];
 		if (c != Signature.C_RESOLVED && c != Signature.C_UNRESOLVED) {
-			throw raiseUnexpectedCharacterException(string, start, c);
+			throw newUnexpectedCharacterException(string, start, c);
 		}
 		int p = start + 1;
 		while (true) {
 			if (p >= string.length) {
-				throw raiseIllegalSignatureException(string, start);
+				throw newIllegalArgumentException(string, start);
 			}
 			c = string[p];
 			switch(c) {
@@ -3247,12 +3260,12 @@ public class Util {
 		}
 	}
 
-	private static IllegalArgumentException raiseIllegalSignatureException(char[] string, int start) {
-		throw new IllegalArgumentException("\"" + new String(string) + "\" starting at " + start); //$NON-NLS-1$ //$NON-NLS-2$
+	private static IllegalArgumentException newIllegalArgumentException(char[] string, int index) {
+		return new IllegalArgumentException("\"" + String.valueOf(string) + "\" at " + index); //$NON-NLS-1$ //$NON-NLS-2$
 	}
 
-	private static IllegalArgumentException raiseUnexpectedCharacterException(char[] string, int start, char unexpected) {
-		throw new IllegalArgumentException("Unexpected '" + unexpected + "' in \"" + new String(string) + "\" starting at " + start); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+	private static IllegalArgumentException newUnexpectedCharacterException(char[] string, int start, char unexpected) {
+		return new IllegalArgumentException("Unexpected '" + unexpected + "' in \"" + String.valueOf(string) + "\" starting at " + start); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
 	}
 
 	private static int scanGenericEnd(char[] string, int start) {
@@ -3318,8 +3331,8 @@ public class Util {
 		}
 	}
 	/**
-	 * Finds the IMethod element corresponding to the given selector, 
-	 * without creating a new dummy instance of a binary method. 
+	 * Finds the IMethod element corresponding to the given selector,
+	 * without creating a new dummy instance of a binary method.
 	 * @param type the type in which the method is declared
 	 * @param selector the method name
 	 * @param paramTypeSignatures the type signatures of the method arguments
@@ -3332,7 +3345,7 @@ public class Util {
 		int startingIndex = 0;
 		String[] args;
 		IType enclosingType = type.getDeclaringType();
-		// If the method is a constructor of a non-static inner type, add the enclosing type as an 
+		// If the method is a constructor of a non-static inner type, add the enclosing type as an
 		// additional parameter to the constructor
 		if (enclosingType != null
 				&& isConstructor
@@ -3348,7 +3361,7 @@ public class Util {
 			args[i] = paramTypeSignatures[i-startingIndex];
 		}
 		method = type.getMethod(new String(selector), args);
-		
+
 		IMethod[] methods = type.findMethods(method);
 		if (methods != null && methods.length > 0) {
 			method = methods[0];
