@@ -1,13 +1,13 @@
 /* *******************************************************************
  * Copyright (c) 2006 Contributors
- * All rights reserved. 
- * This program and the accompanying materials are made available 
- * under the terms of the Eclipse Public License v1.0 
- * which accompanies this distribution and is available at 
- * http://www.eclipse.org/legal/epl-v10.html 
- *  
- * Contributors: 
- *     Andy Clement IBM     initial implementation 
+ * All rights reserved.
+ * This program and the accompanying materials are made available
+ * under the terms of the Eclipse Public License v 2.0
+ * which accompanies this distribution and is available at
+ * https://www.eclipse.org/org/documents/epl-2.0/EPL-2.0.txt
+ *
+ * Contributors:
+ *     Andy Clement IBM     initial implementation
  * ******************************************************************/
 package org.aspectj.weaver;
 
@@ -21,31 +21,31 @@ public class SimpleAnnotationValue extends AnnotationValue {
 		super(kind);
 		switch (kind) {
 		case AnnotationValue.PRIMITIVE_BYTE:
-			theByte = ((Byte) value).byteValue();
+			theByte = (Byte) value;
 			break;
 		case AnnotationValue.PRIMITIVE_CHAR:
-			theChar = ((Character) value).charValue();
+			theChar = (Character) value;
 			break;
 		case AnnotationValue.PRIMITIVE_INT:
-			theInt = ((Integer) value).intValue();
+			theInt = (Integer) value;
 			break;
 		case AnnotationValue.STRING:
 			theString = (String) value;
 			break;
 		case AnnotationValue.PRIMITIVE_DOUBLE:
-			theDouble = ((Double) value).doubleValue();
+			theDouble = (Double) value;
 			break;
 		case AnnotationValue.PRIMITIVE_FLOAT:
-			theFloat = ((Float) value).floatValue();
+			theFloat = (Float) value;
 			break;
 		case AnnotationValue.PRIMITIVE_LONG:
-			theLong = ((Long) value).longValue();
+			theLong = (Long) value;
 			break;
 		case AnnotationValue.PRIMITIVE_SHORT:
-			theShort = ((Short) value).shortValue();
+			theShort = (Short) value;
 			break;
 		case AnnotationValue.PRIMITIVE_BOOLEAN:
-			theBoolean = ((Boolean) value).booleanValue();
+			theBoolean = (Boolean) value;
 			break;
 		default:
 			throw new BCException("Not implemented for this kind: " + whatKindIsThis(kind));
@@ -78,12 +78,13 @@ public class SimpleAnnotationValue extends AnnotationValue {
 		theInt = i;
 	}
 
+	@Override
 	public String stringify() {
 		switch (valueKind) {
 		case 'B': // byte
 			return Byte.toString(theByte);
 		case 'C': // char
-			return new Character(theChar).toString();
+			return Character.toString(theChar);
 		case 'D': // double
 			return Double.toString(theDouble);
 		case 'F': // float
@@ -95,7 +96,7 @@ public class SimpleAnnotationValue extends AnnotationValue {
 		case 'S': // short
 			return Short.toString(theShort);
 		case 'Z': // boolean
-			return new Boolean(theBoolean).toString();
+			return Boolean.valueOf(theBoolean).toString();
 		case 's': // String
 			return theString;
 		default:
@@ -103,6 +104,7 @@ public class SimpleAnnotationValue extends AnnotationValue {
 		}
 	}
 
+	@Override
 	public String toString() {
 		return stringify();
 	}
